@@ -73,12 +73,13 @@ import java.net.InetAddress;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.OptionalInt;
 import java.util.OptionalLong;
+import java.util.Set;
 
 import static org.apache.kafka.common.requests.OffsetFetchResponse.INVALID_OFFSET;
 import static org.apache.kafka.coordinator.group.metrics.GroupCoordinatorMetrics.OFFSET_COMMITS_SENSOR_NAME;
@@ -140,7 +141,7 @@ public class OffsetMetadataManagerTest {
                         .withMetadataImage(metadataImage)
                         .withGroupCoordinatorMetricsShard(metrics)
                         .withGroupConfigManager(configManager)
-                        .withConfig(GroupCoordinatorConfig.fromProps(Collections.emptyMap()))
+                        .withConfig(GroupCoordinatorConfig.fromProps(Map.of()))
                         .build();
                 }
 
@@ -529,10 +530,10 @@ public class OffsetMetadataManagerTest {
             Errors expectedError
         ) {
             final OffsetDeleteRequestData.OffsetDeleteRequestTopicCollection requestTopicCollection =
-                new OffsetDeleteRequestData.OffsetDeleteRequestTopicCollection(Collections.singletonList(
+                new OffsetDeleteRequestData.OffsetDeleteRequestTopicCollection(List.of(
                     new OffsetDeleteRequestData.OffsetDeleteRequestTopic()
                         .setName(topic)
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetDeleteRequestData.OffsetDeleteRequestPartition().setPartitionIndex(partition)
                         ))
                 ).iterator());
@@ -546,15 +547,15 @@ public class OffsetMetadataManagerTest {
             );
 
             final OffsetDeleteResponseData.OffsetDeleteResponseTopicCollection expectedResponseTopicCollection =
-                new OffsetDeleteResponseData.OffsetDeleteResponseTopicCollection(Collections.singletonList(
+                new OffsetDeleteResponseData.OffsetDeleteResponseTopicCollection(List.of(
                     new OffsetDeleteResponseData.OffsetDeleteResponseTopic()
                         .setName(topic)
                         .setPartitions(expectedResponsePartitionCollection)
                 ).iterator());
 
-            List<CoordinatorRecord> expectedRecords = Collections.emptyList();
+            List<CoordinatorRecord> expectedRecords = List.of();
             if (hasOffset(groupId, topic, partition) && expectedError == Errors.NONE) {
-                expectedRecords = Collections.singletonList(
+                expectedRecords = List.of(
                     GroupCoordinatorRecordHelpers.newOffsetCommitTombstoneRecord(groupId, topic, partition)
                 );
             }
@@ -598,10 +599,10 @@ public class OffsetMetadataManagerTest {
                 .setGroupId("foo")
                 .setMemberId("member")
                 .setGenerationIdOrMemberEpoch(10)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitRequestData.OffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitRequestData.OffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -628,10 +629,10 @@ public class OffsetMetadataManagerTest {
                 .setGroupId("foo")
                 .setMemberId("member")
                 .setGenerationIdOrMemberEpoch(10)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitRequestData.OffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitRequestData.OffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -657,10 +658,10 @@ public class OffsetMetadataManagerTest {
                 .setGroupId("foo")
                 .setMemberId("member")
                 .setGenerationIdOrMemberEpoch(10)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitRequestData.OffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitRequestData.OffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -694,10 +695,10 @@ public class OffsetMetadataManagerTest {
                 .setGroupId("foo")
                 .setMemberId("member")
                 .setGenerationIdOrMemberEpoch(10)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitRequestData.OffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitRequestData.OffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -727,10 +728,10 @@ public class OffsetMetadataManagerTest {
                 .setMemberId("member")
                 .setGroupInstanceId("instanceid")
                 .setGenerationIdOrMemberEpoch(10)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitRequestData.OffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitRequestData.OffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -760,10 +761,10 @@ public class OffsetMetadataManagerTest {
                 .setMemberId("member")
                 .setGroupInstanceId("old-instance-id")
                 .setGenerationIdOrMemberEpoch(10)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitRequestData.OffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitRequestData.OffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -797,10 +798,10 @@ public class OffsetMetadataManagerTest {
                 .setGroupId("foo")
                 .setMemberId("member")
                 .setGenerationIdOrMemberEpoch(1)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitRequestData.OffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitRequestData.OffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -832,10 +833,10 @@ public class OffsetMetadataManagerTest {
         assertThrows(UnknownMemberIdException.class, () -> context.commitOffset(
             new OffsetCommitRequestData()
                 .setGroupId("foo")
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitRequestData.OffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitRequestData.OffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -870,10 +871,10 @@ public class OffsetMetadataManagerTest {
                 .setMemberId("member")
                 .setGenerationIdOrMemberEpoch(1)
                 .setRetentionTimeMs(1234L)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitRequestData.OffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitRequestData.OffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -883,10 +884,10 @@ public class OffsetMetadataManagerTest {
 
         assertEquals(
             new OffsetCommitResponseData()
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitResponseData.OffsetCommitResponseTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitResponseData.OffsetCommitResponsePartition()
                                 .setPartitionIndex(0)
                                 .setErrorCode(Errors.NONE.code())
@@ -896,7 +897,7 @@ public class OffsetMetadataManagerTest {
         );
 
         assertEquals(
-            Collections.singletonList(GroupCoordinatorRecordHelpers.newOffsetCommitRecord(
+            List.of(GroupCoordinatorRecordHelpers.newOffsetCommitRecord(
                 "foo",
                 "bar",
                 0,
@@ -938,7 +939,7 @@ public class OffsetMetadataManagerTest {
 
         // Advance time by half of the session timeout. No timeouts are
         // expired.
-        assertEquals(Collections.emptyList(), context.sleep(5000 / 2));
+        assertEquals(List.of(), context.sleep(5000 / 2));
 
         // Commit.
         context.commitOffset(
@@ -947,10 +948,10 @@ public class OffsetMetadataManagerTest {
                 .setMemberId("member")
                 .setGenerationIdOrMemberEpoch(1)
                 .setRetentionTimeMs(1234L)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitRequestData.OffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitRequestData.OffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -960,7 +961,7 @@ public class OffsetMetadataManagerTest {
 
         // Advance time by half of the session timeout. No timeouts are
         // expired.
-        assertEquals(Collections.emptyList(), context.sleep(5000 / 2));
+        assertEquals(List.of(), context.sleep(5000 / 2));
 
         // Advance time by half of the session timeout again. The timeout should
         // expire and the member is removed from the group.
@@ -977,10 +978,10 @@ public class OffsetMetadataManagerTest {
         CoordinatorResult<OffsetCommitResponseData, CoordinatorRecord> result = context.commitOffset(
             new OffsetCommitRequestData()
                 .setGroupId("foo")
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitRequestData.OffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitRequestData.OffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -990,10 +991,10 @@ public class OffsetMetadataManagerTest {
 
         assertEquals(
             new OffsetCommitResponseData()
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitResponseData.OffsetCommitResponseTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitResponseData.OffsetCommitResponsePartition()
                                 .setPartitionIndex(0)
                                 .setErrorCode(Errors.NONE.code())
@@ -1003,7 +1004,7 @@ public class OffsetMetadataManagerTest {
         );
 
         assertEquals(
-            Collections.singletonList(GroupCoordinatorRecordHelpers.newOffsetCommitRecord(
+            List.of(GroupCoordinatorRecordHelpers.newOffsetCommitRecord(
                 "foo",
                 "bar",
                 0,
@@ -1036,10 +1037,10 @@ public class OffsetMetadataManagerTest {
                 .setGroupId("foo")
                 // Instance id should be ignored.
                 .setGroupInstanceId("instance-id")
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitRequestData.OffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitRequestData.OffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -1049,10 +1050,10 @@ public class OffsetMetadataManagerTest {
 
         assertEquals(
             new OffsetCommitResponseData()
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitResponseData.OffsetCommitResponseTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitResponseData.OffsetCommitResponsePartition()
                                 .setPartitionIndex(0)
                                 .setErrorCode(Errors.NONE.code())
@@ -1062,7 +1063,7 @@ public class OffsetMetadataManagerTest {
         );
 
         assertEquals(
-            Collections.singletonList(GroupCoordinatorRecordHelpers.newOffsetCommitRecord(
+            List.of(GroupCoordinatorRecordHelpers.newOffsetCommitRecord(
                 "foo",
                 "bar",
                 0,
@@ -1094,10 +1095,10 @@ public class OffsetMetadataManagerTest {
                 .setGroupId("foo")
                 .setMemberId("member")
                 .setGenerationIdOrMemberEpoch(10)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitRequestData.OffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitRequestData.OffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -1128,10 +1129,10 @@ public class OffsetMetadataManagerTest {
             .setGroupId("foo")
             .setMemberId("member")
             .setGenerationIdOrMemberEpoch(9)
-            .setTopics(Collections.singletonList(
+            .setTopics(List.of(
                 new OffsetCommitRequestData.OffsetCommitRequestTopic()
                     .setName("bar")
-                    .setPartitions(Collections.singletonList(
+                    .setPartitions(List.of(
                         new OffsetCommitRequestData.OffsetCommitRequestPartition()
                             .setPartitionIndex(0)
                             .setCommittedOffset(100L)
@@ -1168,10 +1169,10 @@ public class OffsetMetadataManagerTest {
             .setGroupId("foo")
             .setMemberId("member")
             .setGenerationIdOrMemberEpoch(9)
-            .setTopics(Collections.singletonList(
+            .setTopics(List.of(
                 new OffsetCommitRequestData.OffsetCommitRequestTopic()
                     .setName("bar")
-                    .setPartitions(Collections.singletonList(
+                    .setPartitions(List.of(
                         new OffsetCommitRequestData.OffsetCommitRequestPartition()
                             .setPartitionIndex(0)
                             .setCommittedOffset(100L)
@@ -1199,10 +1200,10 @@ public class OffsetMetadataManagerTest {
         CoordinatorResult<OffsetCommitResponseData, CoordinatorRecord> result = context.commitOffset(
             new OffsetCommitRequestData()
                 .setGroupId("foo")
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitRequestData.OffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitRequestData.OffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -1212,10 +1213,10 @@ public class OffsetMetadataManagerTest {
 
         assertEquals(
             new OffsetCommitResponseData()
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitResponseData.OffsetCommitResponseTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitResponseData.OffsetCommitResponsePartition()
                                 .setPartitionIndex(0)
                                 .setErrorCode(Errors.NONE.code())
@@ -1225,7 +1226,7 @@ public class OffsetMetadataManagerTest {
         );
 
         assertEquals(
-            Collections.singletonList(GroupCoordinatorRecordHelpers.newOffsetCommitRecord(
+            List.of(GroupCoordinatorRecordHelpers.newOffsetCommitRecord(
                 "foo",
                 "bar",
                 0,
@@ -1263,10 +1264,10 @@ public class OffsetMetadataManagerTest {
                 .setGroupId("foo")
                 .setMemberId("member")
                 .setGenerationIdOrMemberEpoch(10)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitRequestData.OffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitRequestData.OffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -1278,10 +1279,10 @@ public class OffsetMetadataManagerTest {
 
         assertEquals(
             new OffsetCommitResponseData()
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitResponseData.OffsetCommitResponseTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new OffsetCommitResponseData.OffsetCommitResponsePartition()
                                 .setPartitionIndex(0)
                                 .setErrorCode(Errors.NONE.code())
@@ -1291,7 +1292,76 @@ public class OffsetMetadataManagerTest {
         );
 
         assertEquals(
-            Collections.singletonList(GroupCoordinatorRecordHelpers.newOffsetCommitRecord(
+            List.of(GroupCoordinatorRecordHelpers.newOffsetCommitRecord(
+                "foo",
+                "bar",
+                0,
+                new OffsetAndMetadata(
+                    100L,
+                    OptionalInt.of(10),
+                    "metadata",
+                    context.time.milliseconds(),
+                    OptionalLong.empty()
+                )
+            )),
+            result.records()
+        );
+    }
+
+    @Test
+    public void testConsumerGroupOffsetCommitWithTopicIds() {
+        Uuid topicId = Uuid.randomUuid();
+        OffsetMetadataManagerTestContext context = new OffsetMetadataManagerTestContext.Builder().build();
+
+        // Create an empty group.
+        ConsumerGroup group = context.groupMetadataManager.getOrMaybeCreatePersistedConsumerGroup(
+            "foo",
+            true
+        );
+
+        // Add member.
+        group.updateMember(new ConsumerGroupMember.Builder("member")
+            .setMemberEpoch(10)
+            .setPreviousMemberEpoch(10)
+            .build()
+        );
+
+        CoordinatorResult<OffsetCommitResponseData, CoordinatorRecord> result = context.commitOffset(
+            new OffsetCommitRequestData()
+                .setGroupId("foo")
+                .setMemberId("member")
+                .setGenerationIdOrMemberEpoch(10)
+                .setTopics(List.of(
+                    new OffsetCommitRequestData.OffsetCommitRequestTopic()
+                        .setTopicId(topicId)
+                        .setName("bar")
+                        .setPartitions(List.of(
+                            new OffsetCommitRequestData.OffsetCommitRequestPartition()
+                                .setPartitionIndex(0)
+                                .setCommittedOffset(100L)
+                                .setCommittedLeaderEpoch(10)
+                                .setCommittedMetadata("metadata")
+                        ))
+                ))
+        );
+
+        assertEquals(
+            new OffsetCommitResponseData()
+                .setTopics(List.of(
+                    new OffsetCommitResponseData.OffsetCommitResponseTopic()
+                        .setTopicId(topicId)
+                        .setName("bar")
+                        .setPartitions(List.of(
+                            new OffsetCommitResponseData.OffsetCommitResponsePartition()
+                                .setPartitionIndex(0)
+                                .setErrorCode(Errors.NONE.code())
+                        ))
+                )),
+            result.response()
+        );
+
+        assertEquals(
+            List.of(GroupCoordinatorRecordHelpers.newOffsetCommitRecord(
                 "foo",
                 "bar",
                 0,
@@ -1331,7 +1401,7 @@ public class OffsetMetadataManagerTest {
                 .setGroupId("foo")
                 .setMemberId("member")
                 .setGenerationIdOrMemberEpoch(10)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitRequestData.OffsetCommitRequestTopic()
                         .setName("bar")
                         .setPartitions(Arrays.asList(
@@ -1351,7 +1421,7 @@ public class OffsetMetadataManagerTest {
 
         assertEquals(
             new OffsetCommitResponseData()
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitResponseData.OffsetCommitResponseTopic()
                         .setName("bar")
                         .setPartitions(Arrays.asList(
@@ -1367,7 +1437,7 @@ public class OffsetMetadataManagerTest {
         );
 
         assertEquals(
-            Collections.singletonList(GroupCoordinatorRecordHelpers.newOffsetCommitRecord(
+            List.of(GroupCoordinatorRecordHelpers.newOffsetCommitRecord(
                 "foo",
                 "bar",
                 1,
@@ -1405,10 +1475,10 @@ public class OffsetMetadataManagerTest {
                 .setGroupId("foo")
                 .setMemberId("member")
                 .setGenerationId(10)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new TxnOffsetCommitRequestData.TxnOffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new TxnOffsetCommitRequestData.TxnOffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -1420,10 +1490,10 @@ public class OffsetMetadataManagerTest {
 
         assertEquals(
             new TxnOffsetCommitResponseData()
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new TxnOffsetCommitResponseData.TxnOffsetCommitResponseTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new TxnOffsetCommitResponseData.TxnOffsetCommitResponsePartition()
                                 .setPartitionIndex(0)
                                 .setErrorCode(Errors.NONE.code())
@@ -1433,7 +1503,7 @@ public class OffsetMetadataManagerTest {
         );
 
         assertEquals(
-            Collections.singletonList(GroupCoordinatorRecordHelpers.newOffsetCommitRecord(
+            List.of(GroupCoordinatorRecordHelpers.newOffsetCommitRecord(
                 "foo",
                 "bar",
                 0,
@@ -1458,10 +1528,10 @@ public class OffsetMetadataManagerTest {
                 .setGroupId("foo")
                 .setMemberId("member")
                 .setGenerationId(10)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new TxnOffsetCommitRequestData.TxnOffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new TxnOffsetCommitRequestData.TxnOffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -1487,10 +1557,10 @@ public class OffsetMetadataManagerTest {
                 .setGroupId("foo")
                 .setMemberId("member")
                 .setGenerationId(10)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new TxnOffsetCommitRequestData.TxnOffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new TxnOffsetCommitRequestData.TxnOffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -1523,10 +1593,10 @@ public class OffsetMetadataManagerTest {
                 .setGroupId("foo")
                 .setMemberId("member")
                 .setGenerationId(100)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new TxnOffsetCommitRequestData.TxnOffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new TxnOffsetCommitRequestData.TxnOffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -1562,10 +1632,10 @@ public class OffsetMetadataManagerTest {
                 .setGroupId("foo")
                 .setMemberId("member")
                 .setGenerationId(1)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new TxnOffsetCommitRequestData.TxnOffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new TxnOffsetCommitRequestData.TxnOffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -1577,10 +1647,10 @@ public class OffsetMetadataManagerTest {
 
         assertEquals(
             new TxnOffsetCommitResponseData()
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new TxnOffsetCommitResponseData.TxnOffsetCommitResponseTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new TxnOffsetCommitResponseData.TxnOffsetCommitResponsePartition()
                                 .setPartitionIndex(0)
                                 .setErrorCode(Errors.NONE.code())
@@ -1590,7 +1660,7 @@ public class OffsetMetadataManagerTest {
         );
 
         assertEquals(
-            Collections.singletonList(GroupCoordinatorRecordHelpers.newOffsetCommitRecord(
+            List.of(GroupCoordinatorRecordHelpers.newOffsetCommitRecord(
                 "foo",
                 "bar",
                 0,
@@ -1615,10 +1685,10 @@ public class OffsetMetadataManagerTest {
                 .setGroupId("foo")
                 .setMemberId("member")
                 .setGenerationId(10)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new TxnOffsetCommitRequestData.TxnOffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new TxnOffsetCommitRequestData.TxnOffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -1644,10 +1714,10 @@ public class OffsetMetadataManagerTest {
                 .setGroupId("foo")
                 .setMemberId("member")
                 .setGenerationId(10)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new TxnOffsetCommitRequestData.TxnOffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new TxnOffsetCommitRequestData.TxnOffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -1683,10 +1753,10 @@ public class OffsetMetadataManagerTest {
                 .setGroupId("foo")
                 .setMemberId("member")
                 .setGenerationId(100)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new TxnOffsetCommitRequestData.TxnOffsetCommitRequestTopic()
                         .setName("bar")
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new TxnOffsetCommitRequestData.TxnOffsetCommitRequestPartition()
                                 .setPartitionIndex(0)
                                 .setCommittedOffset(100L)
@@ -1714,7 +1784,7 @@ public class OffsetMetadataManagerTest {
                 .setPartitionIndexes(Arrays.asList(0, 1)),
             new OffsetFetchRequestData.OffsetFetchRequestTopics()
                 .setName("bar")
-                .setPartitionIndexes(Collections.singletonList(0))
+                .setPartitionIndexes(List.of(0))
         );
 
         List<OffsetFetchResponseData.OffsetFetchResponseTopics> expectedResponse = Arrays.asList(
@@ -1726,7 +1796,7 @@ public class OffsetMetadataManagerTest {
                 )),
             new OffsetFetchResponseData.OffsetFetchResponseTopics()
                 .setName("bar")
-                .setPartitions(Collections.singletonList(
+                .setPartitions(List.of(
                     mkInvalidOffsetPartitionResponse(0)
                 ))
         );
@@ -1744,7 +1814,7 @@ public class OffsetMetadataManagerTest {
                 .setPartitionIndexes(Arrays.asList(0, 1)),
             new OffsetFetchRequestData.OffsetFetchRequestTopics()
                 .setName("bar")
-                .setPartitionIndexes(Collections.singletonList(0))
+                .setPartitionIndexes(List.of(0))
         );
 
         List<OffsetFetchResponseData.OffsetFetchResponseTopics> expectedResponse = Arrays.asList(
@@ -1756,7 +1826,7 @@ public class OffsetMetadataManagerTest {
                 )),
             new OffsetFetchResponseData.OffsetFetchResponseTopics()
                 .setName("bar")
-                .setPartitions(Collections.singletonList(
+                .setPartitions(List.of(
                     mkInvalidOffsetPartitionResponse(0)
                 ))
         );
@@ -2001,13 +2071,13 @@ public class OffsetMetadataManagerTest {
         );
         group.transitionTo(ClassicGroupState.DEAD);
 
-        assertEquals(Collections.emptyList(), context.fetchAllOffsets("group", Long.MAX_VALUE));
+        assertEquals(List.of(), context.fetchAllOffsets("group", Long.MAX_VALUE));
     }
 
     @Test
     public void testFetchAllOffsetsWithUnknownGroup() {
         OffsetMetadataManagerTestContext context = new OffsetMetadataManagerTestContext.Builder().build();
-        assertEquals(Collections.emptyList(), context.fetchAllOffsets("group", Long.MAX_VALUE));
+        assertEquals(List.of(), context.fetchAllOffsets("group", Long.MAX_VALUE));
     }
 
     @Test
@@ -2029,7 +2099,7 @@ public class OffsetMetadataManagerTest {
         assertEquals(5, context.lastWrittenOffset);
 
         // Fetching with 0 should no offsets.
-        assertEquals(Collections.emptyList(), context.fetchAllOffsets("group", 0L));
+        assertEquals(List.of(), context.fetchAllOffsets("group", 0L));
 
         // Fetching with 1 should return data up to offset 1.
         assertEquals(Arrays.asList(
@@ -2181,25 +2251,25 @@ public class OffsetMetadataManagerTest {
         context.commitOffset("group", "foo", 0, 100L, 1);
 
         // Fetch offsets case.
-        List<OffsetFetchRequestData.OffsetFetchRequestTopics> topics = Collections.singletonList(
+        List<OffsetFetchRequestData.OffsetFetchRequestTopics> topics = List.of(
             new OffsetFetchRequestData.OffsetFetchRequestTopics()
                 .setName("foo")
-                .setPartitionIndexes(Collections.singletonList(0))
+                .setPartitionIndexes(List.of(0))
         );
 
-        assertEquals(Collections.singletonList(
+        assertEquals(List.of(
             new OffsetFetchResponseData.OffsetFetchResponseTopics()
                 .setName("foo")
-                .setPartitions(Collections.singletonList(
+                .setPartitions(List.of(
                     mkOffsetPartitionResponse(0, 100L, 1, "metadata")
                 ))
         ), context.fetchOffsets("group", "member", 0, topics, Long.MAX_VALUE));
 
         // Fetch all offsets case.
-        assertEquals(Collections.singletonList(
+        assertEquals(List.of(
             new OffsetFetchResponseData.OffsetFetchResponseTopics()
                 .setName("foo")
-                .setPartitions(Collections.singletonList(
+                .setPartitions(List.of(
                     mkOffsetPartitionResponse(0, 100L, 1, "metadata")
                 ))
         ), context.fetchAllOffsets("group", "member", 0, Long.MAX_VALUE));
@@ -2216,25 +2286,25 @@ public class OffsetMetadataManagerTest {
         context.commitOffset("group", "foo", 0, 100L, 1);
 
         // Fetch offsets case.
-        List<OffsetFetchRequestData.OffsetFetchRequestTopics> topics = Collections.singletonList(
+        List<OffsetFetchRequestData.OffsetFetchRequestTopics> topics = List.of(
             new OffsetFetchRequestData.OffsetFetchRequestTopics()
                 .setName("foo")
-                .setPartitionIndexes(Collections.singletonList(0))
+                .setPartitionIndexes(List.of(0))
         );
 
-        assertEquals(Collections.singletonList(
+        assertEquals(List.of(
             new OffsetFetchResponseData.OffsetFetchResponseTopics()
                 .setName("foo")
-                .setPartitions(Collections.singletonList(
+                .setPartitions(List.of(
                     mkOffsetPartitionResponse(0, 100L, 1, "metadata")
                 ))
         ), context.fetchOffsets("group", topics, Long.MAX_VALUE));
 
         // Fetch all offsets case.
-        assertEquals(Collections.singletonList(
+        assertEquals(List.of(
             new OffsetFetchResponseData.OffsetFetchResponseTopics()
                 .setName("foo")
-                .setPartitions(Collections.singletonList(
+                .setPartitions(List.of(
                     mkOffsetPartitionResponse(0, 100L, 1, "metadata")
                 ))
         ), context.fetchAllOffsets("group", Long.MAX_VALUE));
@@ -2246,10 +2316,10 @@ public class OffsetMetadataManagerTest {
         context.groupMetadataManager.getOrMaybeCreatePersistedConsumerGroup("group", true);
 
         // Fetch offsets case.
-        List<OffsetFetchRequestData.OffsetFetchRequestTopics> topics = Collections.singletonList(
+        List<OffsetFetchRequestData.OffsetFetchRequestTopics> topics = List.of(
             new OffsetFetchRequestData.OffsetFetchRequestTopics()
                 .setName("foo")
-                .setPartitionIndexes(Collections.singletonList(0))
+                .setPartitionIndexes(List.of(0))
         );
 
         // Fetch offsets cases.
@@ -2272,10 +2342,10 @@ public class OffsetMetadataManagerTest {
         group.updateMember(new ConsumerGroupMember.Builder("member").build());
 
         // Fetch offsets case.
-        List<OffsetFetchRequestData.OffsetFetchRequestTopics> topics = Collections.singletonList(
+        List<OffsetFetchRequestData.OffsetFetchRequestTopics> topics = List.of(
             new OffsetFetchRequestData.OffsetFetchRequestTopics()
                 .setName("foo")
-                .setPartitionIndexes(Collections.singletonList(0))
+                .setPartitionIndexes(List.of(0))
         );
 
         // Fetch offsets case.
@@ -2296,10 +2366,10 @@ public class OffsetMetadataManagerTest {
                 .build()
         );
 
-        List<OffsetFetchRequestData.OffsetFetchRequestTopics> topics = Collections.singletonList(
+        List<OffsetFetchRequestData.OffsetFetchRequestTopics> topics = List.of(
             new OffsetFetchRequestData.OffsetFetchRequestTopics()
                 .setName("foo")
-                .setPartitionIndexes(Collections.singletonList(0))
+                .setPartitionIndexes(List.of(0))
         );
 
         // Fetch offsets case.
@@ -2319,7 +2389,7 @@ public class OffsetMetadataManagerTest {
             true
         );
         context.commitOffset("foo", "bar", 0, 100L, 0);
-        group.setSubscribedTopics(Optional.of(Collections.emptySet()));
+        group.setSubscribedTopics(Optional.of(Set.of()));
         context.testOffsetDeleteWith("foo", "bar", 0, Errors.NONE);
         assertFalse(context.hasOffset("foo", "bar", 0));
     }
@@ -2331,7 +2401,7 @@ public class OffsetMetadataManagerTest {
             "foo",
             true
         );
-        group.setSubscribedTopics(Optional.of(Collections.singleton("bar")));
+        group.setSubscribedTopics(Optional.of(Set.of("bar")));
         context.commitOffset("foo", "bar", 0, 100L, 0);
 
         // Delete the offset whose topic partition doesn't exist.
@@ -2348,7 +2418,7 @@ public class OffsetMetadataManagerTest {
             true
         );
         context.commitOffset(10L, "foo", "bar", 0, 100L, 0, context.time.milliseconds());
-        group.setSubscribedTopics(Optional.of(Collections.emptySet()));
+        group.setSubscribedTopics(Optional.of(Set.of()));
         context.testOffsetDeleteWith("foo", "bar", 0, Errors.NONE);
         assertFalse(context.hasOffset("foo", "bar", 0));
     }
@@ -2377,7 +2447,7 @@ public class OffsetMetadataManagerTest {
             .addRacks()
             .build();
         ConsumerGroupMember member1 = new ConsumerGroupMember.Builder("member1")
-            .setSubscribedTopicNames(Collections.singletonList("bar"))
+            .setSubscribedTopicNames(List.of("bar"))
             .build();
         group.computeSubscriptionMetadata(
             group.computeSubscribedTopicNames(null, member1),
@@ -2469,7 +2539,7 @@ public class OffsetMetadataManagerTest {
 
         List<CoordinatorRecord> records = new ArrayList<>();
         assertTrue(context.cleanupExpiredOffsets("unknown-group-id", records));
-        assertEquals(Collections.emptyList(), records);
+        assertEquals(List.of(), records);
     }
 
     @Test
@@ -2500,7 +2570,7 @@ public class OffsetMetadataManagerTest {
 
         List<CoordinatorRecord> records = new ArrayList<>();
         assertFalse(context.cleanupExpiredOffsets("group-id", records));
-        assertEquals(Collections.emptyList(), records);
+        assertEquals(List.of(), records);
     }
 
     @Test
@@ -2524,7 +2594,7 @@ public class OffsetMetadataManagerTest {
         // firstTopic-0: group is still subscribed to firstTopic. Do not expire.
         // secondTopic-0: should expire as offset retention has passed.
         // secondTopic-1: has not passed offset retention. Do not expire.
-        List<CoordinatorRecord> expectedRecords = Collections.singletonList(
+        List<CoordinatorRecord> expectedRecords = List.of(
             GroupCoordinatorRecordHelpers.newOffsetCommitTombstoneRecord("group-id", "secondTopic", 0)
         );
 
@@ -2540,7 +2610,7 @@ public class OffsetMetadataManagerTest {
 
         // Expire secondTopic-1.
         context.time.sleep(500);
-        expectedRecords = Collections.singletonList(
+        expectedRecords = List.of(
             GroupCoordinatorRecordHelpers.newOffsetCommitTombstoneRecord("group-id", "secondTopic", 1)
         );
 
@@ -2589,7 +2659,7 @@ public class OffsetMetadataManagerTest {
         // foo-0 should not be expired because it has a pending transactional offset commit.
         List<CoordinatorRecord> records = new ArrayList<>();
         assertFalse(context.cleanupExpiredOffsets("group-id", records));
-        assertEquals(Collections.emptyList(), records);
+        assertEquals(List.of(), records);
     }
 
     private static OffsetFetchResponseData.OffsetFetchResponsePartitions mkOffsetPartitionResponse(
@@ -2966,13 +3036,13 @@ public class OffsetMetadataManagerTest {
         assertEquals(1, group.generationId());
         group.transitionTo(ClassicGroupState.STABLE);
 
-        CoordinatorResult<OffsetCommitResponseData, CoordinatorRecord> result = context.commitOffset(
+        context.commitOffset(
             new OffsetCommitRequestData()
                 .setGroupId("foo")
                 .setMemberId("member")
                 .setGenerationIdOrMemberEpoch(1)
                 .setRetentionTimeMs(1234L)
-                .setTopics(Collections.singletonList(
+                .setTopics(List.of(
                     new OffsetCommitRequestData.OffsetCommitRequestTopic()
                         .setName("bar")
                         .setPartitions(Arrays.asList(
@@ -3010,7 +3080,7 @@ public class OffsetMetadataManagerTest {
         // firstTopic-0: group is still subscribed to firstTopic. Do not expire.
         // secondTopic-0: should expire as offset retention has passed.
         // secondTopic-1: has not passed offset retention. Do not expire.
-        List<CoordinatorRecord> expectedRecords = Collections.singletonList(
+        List<CoordinatorRecord> expectedRecords = List.of(
             GroupCoordinatorRecordHelpers.newOffsetCommitTombstoneRecord("group-id", "secondTopic", 0)
         );
 
@@ -3048,10 +3118,10 @@ public class OffsetMetadataManagerTest {
 
         context.commitOffset("foo", "bar", 0, 100L, 0);
         context.commitOffset("foo", "bar", 1, 150L, 0);
-        group.setSubscribedTopics(Optional.of(Collections.emptySet()));
+        group.setSubscribedTopics(Optional.of(Set.of()));
 
         OffsetDeleteRequestData.OffsetDeleteRequestTopicCollection requestTopicCollection =
-            new OffsetDeleteRequestData.OffsetDeleteRequestTopicCollection(Collections.singletonList(
+            new OffsetDeleteRequestData.OffsetDeleteRequestTopicCollection(List.of(
                 new OffsetDeleteRequestData.OffsetDeleteRequestTopic()
                     .setName("bar")
                     .setPartitions(Arrays.asList(
@@ -3173,7 +3243,7 @@ public class OffsetMetadataManagerTest {
             5000,
             "consumer",
             new JoinGroupRequestData.JoinGroupRequestProtocolCollection(
-                Collections.singletonList(new JoinGroupRequestData.JoinGroupRequestProtocol()
+                List.of(new JoinGroupRequestData.JoinGroupRequestProtocol()
                     .setName("range")
                     .setMetadata(new byte[0])
                 ).iterator()
