@@ -68,13 +68,13 @@ import java.util.OptionalLong;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static java.util.Collections.emptyMap;
 import static org.apache.kafka.coordinator.group.streams.TaskAssignmentTestUtil.mkTasks;
 import static org.apache.kafka.coordinator.group.streams.TaskAssignmentTestUtil.mkTasksPerSubtopology;
 import static org.apache.kafka.coordinator.group.streams.TaskAssignmentTestUtil.mkTasksTuple;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -101,23 +101,53 @@ public class StreamsGroupTest {
     }
 
     @Test
-    public void testGetOrCreateMember() {
+    public void testGetOrCreateUninitializedMember() {
+        StreamsGroup streamsGroup = createStreamsGroup("foo");
+        StreamsGroupMember uninitializedMember = new StreamsGroupMember.Builder("member-id").build();
+        StreamsGroupMember member = streamsGroup.getOrCreateUninitializedMember("member-id");
+
+        assertEquals(uninitializedMember, member);
+
+        StreamsGroupMember updatedMember = new StreamsGroupMember.Builder(member).setInstanceId("unique-new-id").build();
+        streamsGroup.updateMember(updatedMember);
+
+        assertEquals(updatedMember, streamsGroup.getOrCreateUninitializedMember("member-id"));
+        assertNotEquals(uninitializedMember, streamsGroup.getOrCreateUninitializedMember("member-id"));
+    }
+
+    @Test
+    public void testGetOrCreateDefaultMember() {
+        StreamsGroup streamsGroup = createStreamsGroup("foo");
+        StreamsGroupMember defaultMember = StreamsGroupMember.Builder.withDefaults("member-id").build();
+        StreamsGroupMember member = streamsGroup.getOrCreateDefaultMember("member-id");
+
+        assertEquals(defaultMember, member);
+
+        StreamsGroupMember updatedMember = new StreamsGroupMember.Builder(member).setInstanceId("unique-new-id").build();
+        streamsGroup.updateMember(updatedMember);
+
+        assertEquals(updatedMember, streamsGroup.getOrCreateDefaultMember("member-id"));
+        assertNotEquals(defaultMember, streamsGroup.getOrCreateDefaultMember("member-id"));
+    }
+
+    @Test
+    public void testGetMemberOrThrow() {
         StreamsGroup streamsGroup = createStreamsGroup("foo");
         StreamsGroupMember member;
 
         // Create a member.
-        member = streamsGroup.getOrMaybeCreateMember("member-id", true);
+        member = streamsGroup.getOrCreateDefaultMember("member-id");
         assertEquals("member-id", member.memberId());
 
         // Add member to the group.
         streamsGroup.updateMember(member);
 
         // Get that member back.
-        member = streamsGroup.getOrMaybeCreateMember("member-id", false);
+        member = streamsGroup.getMemberOrThrow("member-id");
         assertEquals("member-id", member.memberId());
 
         assertThrows(UnknownMemberIdException.class, () ->
-            streamsGroup.getOrMaybeCreateMember("does-not-exist", false));
+            streamsGroup.getMemberOrThrow("does-not-exist"));
     }
 
     @Test
@@ -125,13 +155,13 @@ public class StreamsGroupTest {
         StreamsGroup streamsGroup = createStreamsGroup("foo");
         StreamsGroupMember member;
 
-        member = streamsGroup.getOrMaybeCreateMember("member", true);
+        member = streamsGroup.getOrCreateDefaultMember("member");
 
         member = new StreamsGroupMember.Builder(member).build();
 
         streamsGroup.updateMember(member);
 
-        assertEquals(member, streamsGroup.getOrMaybeCreateMember("member", false));
+        assertEquals(member, streamsGroup.getMemberOrThrow("member"));
     }
 
     @Test
@@ -139,7 +169,7 @@ public class StreamsGroupTest {
         StreamsGroup streamsGroup = createStreamsGroup("foo");
 
         // Create a new member which is not static
-        streamsGroup.getOrMaybeCreateMember("member", true);
+        streamsGroup.getOrCreateDefaultMember("member");
         assertNull(streamsGroup.staticMember("instance-id"));
     }
 
@@ -148,7 +178,7 @@ public class StreamsGroupTest {
         StreamsGroup streamsGroup = createStreamsGroup("foo");
         StreamsGroupMember member;
 
-        member = streamsGroup.getOrMaybeCreateMember("member", true);
+        member = streamsGroup.getOrCreateDefaultMember("member");
 
         member = new StreamsGroupMember.Builder(member)
             .setInstanceId("instance")
@@ -157,7 +187,7 @@ public class StreamsGroupTest {
         streamsGroup.updateMember(member);
 
         assertEquals(member, streamsGroup.staticMember("instance"));
-        assertEquals(member, streamsGroup.getOrMaybeCreateMember("member", false));
+        assertEquals(member, streamsGroup.getMemberOrThrow("member"));
         assertEquals(member.memberId(), streamsGroup.staticMemberId("instance"));
     }
 
@@ -165,13 +195,12 @@ public class StreamsGroupTest {
     public void testRemoveMember() {
         StreamsGroup streamsGroup = createStreamsGroup("foo");
 
-        StreamsGroupMember member = streamsGroup.getOrMaybeCreateMember("member", true);
+        StreamsGroupMember member = streamsGroup.getOrCreateDefaultMember("member");
         streamsGroup.updateMember(member);
         assertTrue(streamsGroup.hasMember("member"));
 
         streamsGroup.removeMember("member");
         assertFalse(streamsGroup.hasMember("member"));
-
     }
 
     @Test
@@ -221,19 +250,19 @@ public class StreamsGroupTest {
         streamsGroup.updateMember(member);
 
         assertEquals("process", streamsGroup.currentActiveTaskProcessId(fooSubtopology, 1));
-        assertEquals(Collections.singleton("process"),
+        assertEquals(Set.of("process"),
             streamsGroup.currentStandbyTaskProcessIds(fooSubtopology, 2));
-        assertEquals(Collections.singleton("process"),
+        assertEquals(Set.of("process"),
             streamsGroup.currentWarmupTaskProcessIds(fooSubtopology, 3));
         assertEquals("process", streamsGroup.currentActiveTaskProcessId(barSubtopology, 4));
-        assertEquals(Collections.singleton("process"),
+        assertEquals(Set.of("process"),
             streamsGroup.currentStandbyTaskProcessIds(barSubtopology, 5));
-        assertEquals(Collections.singleton("process"),
+        assertEquals(Set.of("process"),
             streamsGroup.currentWarmupTaskProcessIds(barSubtopology, 6));
         assertNull(streamsGroup.currentActiveTaskProcessId(zarSubtopology, 7));
-        assertEquals(Collections.emptySet(),
+        assertEquals(Set.of(),
             streamsGroup.currentStandbyTaskProcessIds(zarSubtopology, 8));
-        assertEquals(Collections.emptySet(),
+        assertEquals(Set.of(),
             streamsGroup.currentWarmupTaskProcessIds(zarSubtopology, 9));
 
         member = new StreamsGroupMember.Builder(member)
@@ -257,19 +286,19 @@ public class StreamsGroupTest {
         streamsGroup.updateMember(member);
 
         assertEquals("process1", streamsGroup.currentActiveTaskProcessId(fooSubtopology, 1));
-        assertEquals(Collections.singleton("process1"),
+        assertEquals(Set.of("process1"),
             streamsGroup.currentStandbyTaskProcessIds(fooSubtopology, 2));
-        assertEquals(Collections.singleton("process1"),
+        assertEquals(Set.of("process1"),
             streamsGroup.currentWarmupTaskProcessIds(fooSubtopology, 3));
         assertEquals("process1", streamsGroup.currentActiveTaskProcessId(barSubtopology, 4));
-        assertEquals(Collections.singleton("process1"),
+        assertEquals(Set.of("process1"),
             streamsGroup.currentStandbyTaskProcessIds(barSubtopology, 5));
-        assertEquals(Collections.singleton("process1"),
+        assertEquals(Set.of("process1"),
             streamsGroup.currentWarmupTaskProcessIds(barSubtopology, 6));
         assertNull(streamsGroup.currentActiveTaskProcessId(zarSubtopology, 7));
-        assertEquals(Collections.emptySet(),
+        assertEquals(Set.of(),
             streamsGroup.currentStandbyTaskProcessIds(zarSubtopology, 8));
-        assertEquals(Collections.emptySet(),
+        assertEquals(Set.of(),
             streamsGroup.currentWarmupTaskProcessIds(zarSubtopology, 9));
     }
 
@@ -284,9 +313,9 @@ public class StreamsGroupTest {
             .setProcessId("process")
             .setAssignedTasks(
                 new TasksTuple(
-                    emptyMap(),
-                    emptyMap(),
-                    emptyMap()
+                    Map.of(),
+                    Map.of(),
+                    Map.of()
                 )
             )
             .setTasksPendingRevocation(
@@ -329,8 +358,8 @@ public class StreamsGroupTest {
             .setAssignedTasks(
                 new TasksTuple(
                     mkTasksPerSubtopology(mkTasks(fooSubtopologyId, 1)),
-                    emptyMap(),
-                    emptyMap()
+                    Map.of(),
+                    Map.of()
                 )
             )
             .build();
@@ -342,8 +371,8 @@ public class StreamsGroupTest {
             .setAssignedTasks(
                 new TasksTuple(
                     mkTasksPerSubtopology(mkTasks(fooSubtopologyId, 1)),
-                    emptyMap(),
-                    emptyMap()
+                    Map.of(),
+                    Map.of()
                 )
             )
             .build();
@@ -436,26 +465,26 @@ public class StreamsGroupTest {
         streamsGroup.updateMember(member);
 
         assertEquals("process", streamsGroup.currentActiveTaskProcessId(fooSubtopology, 1));
-        assertEquals(Collections.singleton("process"), streamsGroup.currentStandbyTaskProcessIds(fooSubtopology, 2));
-        assertEquals(Collections.singleton("process"), streamsGroup.currentWarmupTaskProcessIds(fooSubtopology, 3));
+        assertEquals(Set.of("process"), streamsGroup.currentStandbyTaskProcessIds(fooSubtopology, 2));
+        assertEquals(Set.of("process"), streamsGroup.currentWarmupTaskProcessIds(fooSubtopology, 3));
         assertEquals("process", streamsGroup.currentActiveTaskProcessId(barSubtopology, 4));
-        assertEquals(Collections.singleton("process"), streamsGroup.currentStandbyTaskProcessIds(barSubtopology, 5));
-        assertEquals(Collections.singleton("process"), streamsGroup.currentWarmupTaskProcessIds(barSubtopology, 6));
+        assertEquals(Set.of("process"), streamsGroup.currentStandbyTaskProcessIds(barSubtopology, 5));
+        assertEquals(Set.of("process"), streamsGroup.currentWarmupTaskProcessIds(barSubtopology, 6));
         assertNull(streamsGroup.currentActiveTaskProcessId(zarSubtopology, 7));
-        assertEquals(Collections.emptySet(), streamsGroup.currentStandbyTaskProcessIds(zarSubtopology, 8));
-        assertEquals(Collections.emptySet(), streamsGroup.currentWarmupTaskProcessIds(zarSubtopology, 9));
+        assertEquals(Set.of(), streamsGroup.currentStandbyTaskProcessIds(zarSubtopology, 8));
+        assertEquals(Set.of(), streamsGroup.currentWarmupTaskProcessIds(zarSubtopology, 9));
 
         streamsGroup.removeMember(member.memberId());
 
         assertNull(streamsGroup.currentActiveTaskProcessId(zarSubtopology, 1));
-        assertEquals(Collections.emptySet(), streamsGroup.currentStandbyTaskProcessIds(zarSubtopology, 2));
-        assertEquals(Collections.emptySet(), streamsGroup.currentWarmupTaskProcessIds(zarSubtopology, 3));
+        assertEquals(Set.of(), streamsGroup.currentStandbyTaskProcessIds(zarSubtopology, 2));
+        assertEquals(Set.of(), streamsGroup.currentWarmupTaskProcessIds(zarSubtopology, 3));
         assertNull(streamsGroup.currentActiveTaskProcessId(zarSubtopology, 3));
-        assertEquals(Collections.emptySet(), streamsGroup.currentStandbyTaskProcessIds(zarSubtopology, 4));
-        assertEquals(Collections.emptySet(), streamsGroup.currentWarmupTaskProcessIds(zarSubtopology, 5));
+        assertEquals(Set.of(), streamsGroup.currentStandbyTaskProcessIds(zarSubtopology, 4));
+        assertEquals(Set.of(), streamsGroup.currentWarmupTaskProcessIds(zarSubtopology, 5));
         assertNull(streamsGroup.currentActiveTaskProcessId(zarSubtopology, 7));
-        assertEquals(Collections.emptySet(), streamsGroup.currentStandbyTaskProcessIds(zarSubtopology, 8));
-        assertEquals(Collections.emptySet(), streamsGroup.currentWarmupTaskProcessIds(zarSubtopology, 9));
+        assertEquals(Set.of(), streamsGroup.currentStandbyTaskProcessIds(zarSubtopology, 8));
+        assertEquals(Set.of(), streamsGroup.currentWarmupTaskProcessIds(zarSubtopology, 9));
     }
 
     @Test
@@ -475,7 +504,7 @@ public class StreamsGroupTest {
         assertEquals(MemberState.STABLE, member1.state());
         assertEquals(StreamsGroup.StreamsGroupState.NOT_READY, streamsGroup.state());
 
-        streamsGroup.setTopology(new StreamsTopology(1, Collections.emptyMap()));
+        streamsGroup.setTopology(new StreamsTopology(1, Map.of()));
 
         assertEquals(MemberState.STABLE, member1.state());
         assertEquals(StreamsGroup.StreamsGroupState.ASSIGNING, streamsGroup.state());
@@ -672,7 +701,7 @@ public class StreamsGroupTest {
             mock(GroupCoordinatorMetricsShard.class)
         );
         group.setGroupEpoch(1);
-        group.setTopology(new StreamsTopology(1, Collections.emptyMap()));
+        group.setTopology(new StreamsTopology(1, Map.of()));
         group.setTargetAssignmentEpoch(1);
         group.updateMember(new StreamsGroupMember.Builder("member1")
             .setMemberEpoch(1)
@@ -737,7 +766,7 @@ public class StreamsGroupTest {
         assertEquals(StreamsGroup.StreamsGroupState.NOT_READY, streamsGroup.state());
         assertThrows(GroupNotEmptyException.class, streamsGroup::validateDeleteGroup);
 
-        streamsGroup.setTopology(new StreamsTopology(1, Collections.emptyMap()));
+        streamsGroup.setTopology(new StreamsTopology(1, Map.of()));
 
         assertEquals(StreamsGroup.StreamsGroupState.RECONCILING, streamsGroup.state());
         assertThrows(GroupNotEmptyException.class, streamsGroup::validateDeleteGroup);
@@ -781,7 +810,7 @@ public class StreamsGroupTest {
         assertEquals(StreamsGroup.StreamsGroupState.EMPTY.toString(), group.stateAsString(0));
 
         group.setGroupEpoch(1);
-        group.setTopology(new StreamsTopology(1, Collections.emptyMap()));
+        group.setTopology(new StreamsTopology(1, Map.of()));
         group.setTargetAssignmentEpoch(1);
         group.updateMember(new StreamsGroupMember.Builder("member1")
             .setMemberEpoch(1)
@@ -795,9 +824,9 @@ public class StreamsGroupTest {
             .setTopologyEpoch(1)
             .setProcessId("process1")
             .setUserEndpoint(new StreamsGroupMemberMetadataValue.Endpoint().setHost("host1").setPort(9092))
-            .setClientTags(Collections.singletonMap("tag1", "value1"))
-            .setAssignedTasks(new TasksTuple(Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap()))
-            .setTasksPendingRevocation(new TasksTuple(Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap()))
+            .setClientTags(Map.of("tag1", "value1"))
+            .setAssignedTasks(new TasksTuple(Map.of(), Map.of(), Map.of()))
+            .setTasksPendingRevocation(new TasksTuple(Map.of(), Map.of(), Map.of()))
             .build());
         group.updateMember(new StreamsGroupMember.Builder("member2")
             .setMemberEpoch(1)
@@ -811,9 +840,9 @@ public class StreamsGroupTest {
             .setTopologyEpoch(1)
             .setProcessId("process2")
             .setUserEndpoint(new StreamsGroupMemberMetadataValue.Endpoint().setHost("host2").setPort(9092))
-            .setClientTags(Collections.singletonMap("tag2", "value2"))
-            .setAssignedTasks(new TasksTuple(Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap()))
-            .setTasksPendingRevocation(new TasksTuple(Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap()))
+            .setClientTags(Map.of("tag2", "value2"))
+            .setAssignedTasks(new TasksTuple(Map.of(), Map.of(), Map.of()))
+            .setTasksPendingRevocation(new TasksTuple(Map.of(), Map.of(), Map.of()))
             .build());
         snapshotRegistry.idempotentCreateSnapshot(1);
 
@@ -821,7 +850,7 @@ public class StreamsGroupTest {
             .setGroupId("group-id-1")
             .setGroupState(StreamsGroup.StreamsGroupState.STABLE.toString())
             .setGroupEpoch(1)
-            .setTopology(new StreamsGroupDescribeResponseData.Topology().setEpoch(1).setSubtopologies(Collections.emptyList()))
+            .setTopology(new StreamsGroupDescribeResponseData.Topology().setEpoch(1).setSubtopologies(List.of()))
             .setAssignmentEpoch(1)
             .setMembers(Arrays.asList(
                 new StreamsGroupDescribeResponseData.Member()
@@ -834,7 +863,7 @@ public class StreamsGroupTest {
                     .setTopologyEpoch(1)
                     .setProcessId("process1")
                     .setUserEndpoint(new StreamsGroupDescribeResponseData.Endpoint().setHost("host1").setPort(9092))
-                    .setClientTags(Collections.singletonList(new StreamsGroupDescribeResponseData.KeyValue().setKey("tag1").setValue("value1")))
+                    .setClientTags(List.of(new StreamsGroupDescribeResponseData.KeyValue().setKey("tag1").setValue("value1")))
                     .setAssignment(new StreamsGroupDescribeResponseData.Assignment())
                     .setTargetAssignment(new StreamsGroupDescribeResponseData.Assignment()),
                 new StreamsGroupDescribeResponseData.Member()
@@ -847,7 +876,7 @@ public class StreamsGroupTest {
                     .setTopologyEpoch(1)
                     .setProcessId("process2")
                     .setUserEndpoint(new StreamsGroupDescribeResponseData.Endpoint().setHost("host2").setPort(9092))
-                    .setClientTags(Collections.singletonList(new StreamsGroupDescribeResponseData.KeyValue().setKey("tag2").setValue("value2")))
+                    .setClientTags(List.of(new StreamsGroupDescribeResponseData.KeyValue().setKey("tag2").setValue("value2")))
                     .setAssignment(new StreamsGroupDescribeResponseData.Assignment())
                     .setTargetAssignment(new StreamsGroupDescribeResponseData.Assignment())
             ));
@@ -861,20 +890,20 @@ public class StreamsGroupTest {
         SnapshotRegistry snapshotRegistry = new SnapshotRegistry(LOG_CONTEXT);
         GroupCoordinatorMetricsShard metricsShard = new GroupCoordinatorMetricsShard(
             snapshotRegistry,
-            emptyMap(),
+            Map.of(),
             new TopicPartition("__consumer_offsets", 0)
         );
         StreamsGroup group = new StreamsGroup(LOG_CONTEXT, snapshotRegistry, "group-foo", metricsShard);
         snapshotRegistry.idempotentCreateSnapshot(0);
-        assertTrue(group.isInStates(Collections.singleton("empty"), 0));
-        assertFalse(group.isInStates(Collections.singleton("Empty"), 0));
+        assertTrue(group.isInStates(Set.of("empty"), 0));
+        assertFalse(group.isInStates(Set.of("Empty"), 0));
 
         group.updateMember(new StreamsGroupMember.Builder("member1")
             .build());
         snapshotRegistry.idempotentCreateSnapshot(1);
-        assertTrue(group.isInStates(Collections.singleton("empty"), 0));
-        assertTrue(group.isInStates(Collections.singleton("not_ready"), 1));
-        assertFalse(group.isInStates(Collections.singleton("empty"), 1));
+        assertTrue(group.isInStates(Set.of("empty"), 0));
+        assertTrue(group.isInStates(Set.of("not_ready"), 1));
+        assertFalse(group.isInStates(Set.of("empty"), 1));
     }
 
     @Test
@@ -883,7 +912,7 @@ public class StreamsGroupTest {
         GroupCoordinatorMetricsShard metricsShard = mock(GroupCoordinatorMetricsShard.class);
         StreamsGroup streamsGroup = new StreamsGroup(LOG_CONTEXT, snapshotRegistry, "test-group", metricsShard);
 
-        StreamsTopology topology = new StreamsTopology(1, Collections.emptyMap());
+        StreamsTopology topology = new StreamsTopology(1, Map.of());
 
         ConfiguredTopology topo = mock(ConfiguredTopology.class);
         when(topo.isReady()).thenReturn(true);
@@ -925,7 +954,7 @@ public class StreamsGroupTest {
         assertTrue(streamsGroup.configuredTopology().isEmpty(), "Configured topology should not be present");
         assertEquals(partitionMetadata, streamsGroup.partitionMetadata());
 
-        StreamsTopology topology = new StreamsTopology(1, Collections.emptyMap());
+        StreamsTopology topology = new StreamsTopology(1, Map.of());
         ConfiguredTopology topo = mock(ConfiguredTopology.class);
         when(topo.isReady()).thenReturn(true);
         try (MockedStatic<InternalTopicManager> mocked = mockStatic(InternalTopicManager.class)) {
@@ -955,7 +984,7 @@ public class StreamsGroupTest {
         assertTrue(streamsGroup.configuredTopology().isEmpty(), "Configured topology should not be present");
         assertEquals(partitionMetadata, streamsGroup.partitionMetadata());
 
-        StreamsTopology topology = new StreamsTopology(1, Collections.emptyMap());
+        StreamsTopology topology = new StreamsTopology(1, Map.of());
         streamsGroup.setTopology(topology);
         ConfiguredTopology topo = mock(ConfiguredTopology.class);
         when(topo.isReady()).thenReturn(true);
@@ -995,7 +1024,7 @@ public class StreamsGroupTest {
         when(topicImage.partitions()).thenReturn(Collections.singletonMap(0, null));
         when(topicsImage.getTopic("topic1")).thenReturn(topicImage);
         StreamsTopology topology = mock(StreamsTopology.class);
-        when(topology.requiredTopics()).thenReturn(Collections.singleton("topic1"));
+        when(topology.requiredTopics()).thenReturn(Set.of("topic1"));
 
         Map<String, TopicMetadata> partitionMetadata = streamsGroup.computePartitionMetadata(topicsImage, topology);
 
@@ -1076,5 +1105,37 @@ public class StreamsGroupTest {
         assertTrue(streamsGroup.isSubscribedToTopic("test-topic1"));
         assertTrue(streamsGroup.isSubscribedToTopic("test-topic2"));
         assertFalse(streamsGroup.isSubscribedToTopic("non-existent-topic"));
+    }
+
+    @Test
+    public void testShutdownRequestedMethods() {
+        String memberId1 = "test-member-id1";
+        String memberId2 = "test-member-id2";
+        LogContext logContext = new LogContext();
+        SnapshotRegistry snapshotRegistry = new SnapshotRegistry(logContext);
+        GroupCoordinatorMetricsShard metricsShard = mock(GroupCoordinatorMetricsShard.class);
+        StreamsGroup streamsGroup = new StreamsGroup(logContext, snapshotRegistry, "test-group", metricsShard);
+
+        streamsGroup.updateMember(streamsGroup.getOrCreateDefaultMember(memberId1));
+        streamsGroup.updateMember(streamsGroup.getOrCreateDefaultMember(memberId2));
+
+        // Initially, shutdown should not be requested
+        assertTrue(streamsGroup.getShutdownRequestMemberId().isEmpty());
+
+        // Set shutdown requested
+        streamsGroup.setShutdownRequestMemberId(memberId1);
+        assertEquals(Optional.of(memberId1), streamsGroup.getShutdownRequestMemberId());
+
+        // Setting shutdown requested again will be ignored
+        streamsGroup.setShutdownRequestMemberId(memberId2);
+        assertEquals(Optional.of(memberId1), streamsGroup.getShutdownRequestMemberId());
+
+        // As long as group not empty, remain in shutdown requested state
+        streamsGroup.removeMember(memberId1);
+        assertEquals(Optional.of(memberId1), streamsGroup.getShutdownRequestMemberId());
+
+        // As soon as the group is empty, clear the shutdown requested state
+        streamsGroup.removeMember(memberId2);
+        assertEquals(Optional.empty(), streamsGroup.getShutdownRequestMemberId());
     }
 }
