@@ -17,7 +17,9 @@
 package org.apache.kafka.raft;
 
 import org.apache.kafka.common.Node;
+import org.apache.kafka.common.Uuid;
 import org.apache.kafka.common.compress.Compression;
+import org.apache.kafka.common.errors.InvalidUpdateVersionException;
 import org.apache.kafka.common.feature.SupportedVersionRange;
 import org.apache.kafka.common.message.ApiVersionsResponseData;
 import org.apache.kafka.common.message.EndQuorumEpochResponseData;
@@ -46,31 +48,36 @@ import org.apache.kafka.snapshot.SnapshotReader;
 import org.apache.kafka.snapshot.SnapshotWriterReaderTest;
 
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.EnumSource;
 import org.mockito.Mockito;
 
 import java.net.InetSocketAddress;
 import java.nio.ByteBuffer;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.OptionalInt;
 import java.util.OptionalLong;
 import java.util.concurrent.ThreadLocalRandom;
+import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
 import static org.apache.kafka.raft.KafkaRaftClientTest.replicaKey;
+import static org.apache.kafka.raft.RaftClientTestContext.RaftProtocol;
 import static org.apache.kafka.snapshot.Snapshots.BOOTSTRAP_SNAPSHOT_ID;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class KafkaRaftClientReconfigTest {
+    private static final int NUMBER_FETCH_TIMEOUTS_IN_UPDATE_PERIOD = 1;
 
     @Test
     public void testLeaderWritesBootstrapRecords() throws Exception {
@@ -85,8 +92,8 @@ public class KafkaRaftClientReconfigTest {
             .withUnknownLeader(0)
             .build();
 
-        List<List<ControlRecord>> expectedBootstrapRecords = Arrays.asList(
-            Arrays.asList(
+        List<List<ControlRecord>> expectedBootstrapRecords = List.of(
+            List.of(
                 new ControlRecord(
                     ControlRecordType.SNAPSHOT_HEADER,
                     new SnapshotHeaderRecord()
@@ -104,7 +111,7 @@ public class KafkaRaftClientReconfigTest {
                     voters.toVotersRecord(ControlRecordUtils.KRAFT_VOTERS_CURRENT_VERSION)
                 )
             ),
-            Arrays.asList(
+            List.of(
                 new ControlRecord(
                     ControlRecordType.SNAPSHOT_FOOTER,
                     new SnapshotFooterRecord()
@@ -136,8 +143,8 @@ public class KafkaRaftClientReconfigTest {
         Record record = recordIterator.next();
         RaftClientTestContext.verifyLeaderChangeMessage(
             local.id(),
-            Arrays.asList(local.id(), follower.id()),
-            Arrays.asList(local.id(), follower.id()),
+            List.of(local.id(), follower.id()),
+            List.of(local.id(), follower.id()),
             record.key(),
             record.value()
         );
@@ -189,24 +196,6 @@ public class KafkaRaftClientReconfigTest {
             .withUnknownLeader(0)
             .build();
 
-        List<List<ControlRecord>> expectedBootstrapRecords = Arrays.asList(
-            Arrays.asList(
-                new ControlRecord(
-                    ControlRecordType.SNAPSHOT_HEADER,
-                    new SnapshotHeaderRecord()
-                        .setVersion((short) 0)
-                        .setLastContainedLogTimestamp(0)
-                )
-            ),
-            Arrays.asList(
-                new ControlRecord(
-                    ControlRecordType.SNAPSHOT_FOOTER,
-                    new SnapshotFooterRecord()
-                        .setVersion((short) 0)
-                )
-            )
-        );
-
         // check leader does not write bootstrap records to log
         context.unattachedToLeader();
 
@@ -217,8 +206,8 @@ public class KafkaRaftClientReconfigTest {
         Record record = recordIterator.next();
         RaftClientTestContext.verifyLeaderChangeMessage(
             local.id(),
-            Arrays.asList(local.id(), follower.id()),
-            Arrays.asList(local.id(), follower.id()),
+            List.of(local.id(), follower.id()),
+            List.of(local.id(), follower.id()),
             record.key(),
             record.value()
         );
@@ -349,7 +338,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Show that the new voter is not currently a voter
@@ -430,7 +419,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // empty cluster id is rejected
@@ -465,7 +454,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Attempt to add new voter to the quorum
@@ -495,7 +484,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(ListenerName.normalised("not_the_default_listener"), newAddress)
+            Map.of(ListenerName.normalised("not_the_default_listener"), newAddress)
         );
 
         // Attempt to add new voter to the quorum
@@ -526,7 +515,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -553,7 +542,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + anotherNewVoter.id()
         );
         Endpoints anotherNewListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), anotherNewAddress)
+            Map.of(context.channel.listenerName(), anotherNewAddress)
         );
         context.deliverRequest(context.addVoterRequest(Integer.MAX_VALUE, anotherNewVoter, anotherNewListeners));
         context.pollUntilResponse();
@@ -582,7 +571,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Catch up the new voter to the leader's LEO
@@ -620,7 +609,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -665,7 +654,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -710,7 +699,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -782,7 +771,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -842,7 +831,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -902,7 +891,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -957,7 +946,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -1010,7 +999,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -1140,7 +1129,7 @@ public class KafkaRaftClientReconfigTest {
         context.pollUntilRequest();
         context.collectEndQuorumRequests(
             epoch,
-            new HashSet<>(Arrays.asList(follower1.id(), follower2.id())),
+            new HashSet<>(List.of(follower1.id(), follower2.id())),
             Optional.empty()
         );
 
@@ -1503,7 +1492,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
         context.deliverRequest(context.addVoterRequest(Integer.MAX_VALUE, newVoter, newListeners));
         context.pollUntilResponse();
@@ -1532,7 +1521,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -1715,6 +1704,53 @@ public class KafkaRaftClientReconfigTest {
     }
 
     @Test
+    public void testInvalidUpdateVoter() throws Exception {
+        ReplicaKey local = replicaKey(randomReplicaId(), true);
+        ReplicaKey follower = replicaKey(local.id() + 1, true);
+
+        VoterSet voters = VoterSetTest.voterSet(Stream.of(local, follower));
+
+        RaftClientTestContext context = new RaftClientTestContext.Builder(local.id(), local.directoryId().get())
+            .withKip853Rpc(true)
+            .withBootstrapSnapshot(Optional.of(voters))
+            .withUnknownLeader(3)
+            .build();
+
+        context.unattachedToLeader();
+        int epoch = context.currentEpoch();
+
+        // missing directory id
+        context.deliverRequest(
+            context.updateVoterRequest(
+                ReplicaKey.of(follower.id(), Uuid.ZERO_UUID),
+                Feature.KRAFT_VERSION.supportedVersionRange(),
+                Endpoints.empty()
+            )
+        );
+        context.pollUntilResponse();
+        context.assertSentUpdateVoterResponse(
+            Errors.INVALID_REQUEST,
+            OptionalInt.of(local.id()),
+            epoch
+        );
+
+        // missing endpoints
+        context.deliverRequest(
+            context.updateVoterRequest(
+                follower,
+                Feature.KRAFT_VERSION.supportedVersionRange(),
+                Endpoints.empty()
+            )
+        );
+        context.pollUntilResponse();
+        context.assertSentUpdateVoterResponse(
+            Errors.INVALID_REQUEST,
+            OptionalInt.of(local.id()),
+            epoch
+        );
+    }
+
+    @Test
     void testUpdateVoterOldEpoch() throws Exception {
         ReplicaKey local = replicaKey(randomReplicaId(), true);
         ReplicaKey follower = replicaKey(local.id() + 1, true);
@@ -1853,7 +1889,6 @@ public class KafkaRaftClientReconfigTest {
         );
     }
 
-    // KAFKA-16538 is going to allow UpdateVoter RPC when the kraft.version is 0
     @Test
     void testUpdateVoterWithKraftVersion0() throws Exception {
         ReplicaKey local = replicaKey(randomReplicaId(), true);
@@ -1899,7 +1934,7 @@ public class KafkaRaftClientReconfigTest {
         );
         context.pollUntilResponse();
         context.assertSentUpdateVoterResponse(
-            Errors.UNSUPPORTED_VERSION,
+            Errors.NONE,
             OptionalInt.of(local.id()),
             epoch
         );
@@ -2029,7 +2064,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newVoterListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newVoterAddress)
+            Map.of(context.channel.listenerName(), newVoterAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -2104,8 +2139,8 @@ public class KafkaRaftClientReconfigTest {
             .withLocalListeners(localListeners)
             .build();
 
-        // waiting for 3 times the fetch timeout sends an update voter
-        for (int i = 0; i < 3; i++) {
+        // waiting for FETCH requests until the UpdateRaftVoter request is sent
+        for (int i = 0; i < NUMBER_FETCH_TIMEOUTS_IN_UPDATE_PERIOD; i++) {
             context.time.sleep(context.fetchTimeoutMs - 1);
             context.pollUntilRequest();
             RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest();
@@ -2149,6 +2184,444 @@ public class KafkaRaftClientReconfigTest {
         context.assertFetchRequestData(fetchRequest, epoch, 0L, 0);
     }
 
+    @ParameterizedTest
+    @EnumSource(value = Errors.class, names = {"NONE", "UNSUPPORTED_VERSION"})
+    void testFollowerSendsUpdateVoterWithKraftVersion0(Errors updateVoterError) throws Exception {
+        ReplicaKey local = replicaKey(randomReplicaId(), true);
+        ReplicaKey voter1 = replicaKey(local.id() + 1, true);
+        ReplicaKey voter2 = replicaKey(local.id() + 2, true);
+
+        VoterSet voters = VoterSetTest.voterSet(Stream.of(local, voter1, voter2));
+        int epoch = 4;
+
+        HashMap<ListenerName, InetSocketAddress> listenersMap = new HashMap<>(2);
+        listenersMap.put(
+            VoterSetTest.DEFAULT_LISTENER_NAME,
+            InetSocketAddress.createUnresolved("localhost", 9990 + local.id())
+        );
+        listenersMap.put(
+            ListenerName.normalised("ANOTHER_LISTENER"),
+            InetSocketAddress.createUnresolved("localhost", 8990 + local.id())
+        );
+        Endpoints localListeners = Endpoints.fromInetSocketAddresses(listenersMap);
+
+        RaftClientTestContext context = new RaftClientTestContext.Builder(local.id(), local.directoryId().get())
+            .withKip853Rpc(true)
+            .withStaticVoters(voters)
+            .withElectedLeader(epoch, voter1.id())
+            .withLocalListeners(localListeners)
+            .build();
+
+        // waiting for FETCH request until the UpdateRaftVoter request is set
+        for (int i = 0; i < NUMBER_FETCH_TIMEOUTS_IN_UPDATE_PERIOD; i++) {
+            context.time.sleep(context.fetchTimeoutMs - 1);
+            context.pollUntilRequest();
+            RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest();
+            context.assertFetchRequestData(fetchRequest, epoch, 0L, 0);
+
+            context.deliverResponse(
+                fetchRequest.correlationId(),
+                fetchRequest.destination(),
+                context.fetchResponse(
+                    epoch,
+                    voter1.id(),
+                    MemoryRecords.EMPTY,
+                    0L,
+                    Errors.NONE
+                )
+            );
+            // poll kraft to handle the fetch response
+            context.client.poll();
+        }
+
+        context.time.sleep(context.fetchTimeoutMs - 1);
+        context.pollUntilRequest();
+        RaftRequest.Outbound updateRequest = context.assertSentUpdateVoterRequest(
+            local,
+            epoch,
+            Feature.KRAFT_VERSION.supportedVersionRange(),
+            localListeners
+        );
+        context.deliverResponse(
+            updateRequest.correlationId(),
+            updateRequest.destination(),
+            context.updateVoterResponse(
+                updateVoterError,
+                new LeaderAndEpoch(OptionalInt.of(voter1.id()), epoch)
+            )
+        );
+        context.client.poll();
+
+        // after sending an update voter the next requests should be fetch and no update voter
+        for (int i = 0; i < 10; i++) {
+            context.time.sleep(context.fetchTimeoutMs - 1);
+            context.pollUntilRequest();
+            RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest();
+            context.assertFetchRequestData(fetchRequest, epoch, 0L, 0);
+
+            context.deliverResponse(
+                fetchRequest.correlationId(),
+                fetchRequest.destination(),
+                context.fetchResponse(
+                    epoch,
+                    voter1.id(),
+                    MemoryRecords.EMPTY,
+                    0L,
+                    Errors.NONE
+                )
+            );
+            // poll kraft to handle the fetch response
+            context.client.poll();
+        }
+    }
+
+    @ParameterizedTest
+    @EnumSource(value = Errors.class, names = {"NONE", "UNSUPPORTED_VERSION"})
+    void testFollowerSendsUpdateVoterAfterElectionWithKraftVersion0(Errors updateVoterError) throws Exception {
+        ReplicaKey local = replicaKey(randomReplicaId(), true);
+        ReplicaKey voter1 = replicaKey(local.id() + 1, true);
+        ReplicaKey voter2 = replicaKey(local.id() + 2, true);
+
+        VoterSet voters = VoterSetTest.voterSet(Stream.of(local, voter1, voter2));
+        int epoch = 4;
+
+        HashMap<ListenerName, InetSocketAddress> listenersMap = new HashMap<>(2);
+        listenersMap.put(
+            VoterSetTest.DEFAULT_LISTENER_NAME,
+            InetSocketAddress.createUnresolved("localhost", 9990 + local.id())
+        );
+        listenersMap.put(
+            ListenerName.normalised("ANOTHER_LISTENER"),
+            InetSocketAddress.createUnresolved("localhost", 8990 + local.id())
+        );
+        Endpoints localListeners = Endpoints.fromInetSocketAddresses(listenersMap);
+
+        RaftClientTestContext context = new RaftClientTestContext.Builder(local.id(), local.directoryId().get())
+            .withKip853Rpc(true)
+            .withStaticVoters(voters)
+            .withElectedLeader(epoch, voter1.id())
+            .withLocalListeners(localListeners)
+            .build();
+
+        // waiting for FETCH request until the UpdateRaftVoter request is set
+        for (int i = 0; i < NUMBER_FETCH_TIMEOUTS_IN_UPDATE_PERIOD; i++) {
+            context.time.sleep(context.fetchTimeoutMs - 1);
+            context.pollUntilRequest();
+            RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest();
+            context.assertFetchRequestData(fetchRequest, epoch, 0L, 0);
+
+            context.deliverResponse(
+                fetchRequest.correlationId(),
+                fetchRequest.destination(),
+                context.fetchResponse(
+                    epoch,
+                    voter1.id(),
+                    MemoryRecords.EMPTY,
+                    0L,
+                    Errors.NONE
+                )
+            );
+            // poll kraft to handle the fetch response
+            context.client.poll();
+        }
+
+        context.time.sleep(context.fetchTimeoutMs - 1);
+        context.pollUntilRequest();
+        RaftRequest.Outbound updateRequest = context.assertSentUpdateVoterRequest(
+            local,
+            epoch,
+            Feature.KRAFT_VERSION.supportedVersionRange(),
+            localListeners
+        );
+        context.deliverResponse(
+            updateRequest.correlationId(),
+            updateRequest.destination(),
+            context.updateVoterResponse(
+                updateVoterError,
+                new LeaderAndEpoch(OptionalInt.of(voter1.id()), epoch)
+            )
+        );
+
+        context.pollUntilRequest();
+        RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest();
+        context.assertFetchRequestData(fetchRequest, epoch, 0L, 0);
+
+        // Election a new leader causes the replica to resend update voter request
+        int newEpoch = epoch + 1;
+        context.deliverRequest(context.beginEpochRequest(newEpoch, voter1.id()));
+        context.pollUntilResponse();
+
+        // waiting for FETCH request until the UpdateRaftVoter request is set
+        for (int i = 0; i < NUMBER_FETCH_TIMEOUTS_IN_UPDATE_PERIOD; i++) {
+            context.time.sleep(context.fetchTimeoutMs - 1);
+            context.pollUntilRequest();
+            fetchRequest = context.assertSentFetchRequest();
+            context.assertFetchRequestData(fetchRequest, newEpoch, 0L, 0);
+
+            context.deliverResponse(
+                fetchRequest.correlationId(),
+                fetchRequest.destination(),
+                context.fetchResponse(
+                    newEpoch,
+                    voter1.id(),
+                    MemoryRecords.EMPTY,
+                    0L,
+                    Errors.NONE
+                )
+            );
+            // poll kraft to handle the fetch response
+            context.client.poll();
+        }
+
+        context.time.sleep(context.fetchTimeoutMs - 1);
+        context.pollUntilRequest();
+        updateRequest = context.assertSentUpdateVoterRequest(
+            local,
+            newEpoch,
+            Feature.KRAFT_VERSION.supportedVersionRange(),
+            localListeners
+        );
+        context.deliverResponse(
+            updateRequest.correlationId(),
+            updateRequest.destination(),
+            context.updateVoterResponse(
+                Errors.NONE,
+                new LeaderAndEpoch(OptionalInt.of(voter1.id()), newEpoch)
+            )
+        );
+
+        context.pollUntilRequest();
+        fetchRequest = context.assertSentFetchRequest();
+        context.assertFetchRequestData(fetchRequest, newEpoch, 0L, 0);
+    }
+
+    @Test
+    void testKRaftUpgradeVersion() throws Exception {
+        var local = replicaKey(randomReplicaId(), true);
+        var voter1 = replicaKey(local.id() + 1, true);
+        var voter2  = replicaKey(local.id() + 2, true);
+
+        VoterSet startingVoters = VoterSetTest.voterSet(
+            VoterSetTest.voterMap(IntStream.of(local.id(), voter1.id(), voter2.id()), false)
+        );
+
+        var context = new RaftClientTestContext.Builder(local.id(), local.directoryId().get())
+            .withRaftProtocol(RaftProtocol.KIP_853_PROTOCOL)
+            .withStartingVoters(startingVoters, KRaftVersion.KRAFT_VERSION_0)
+            .build();
+
+        context.unattachedToLeader();
+        var epoch = context.currentEpoch();
+
+        // Establish a HWM and fence previous leaders
+        for (var voter : List.of(voter1, voter2)) {
+            context.deliverRequest(
+                context.fetchRequest(epoch, voter, context.log.endOffset().offset(), epoch, 0)
+            );
+            context.pollUntilResponse();
+            context.assertSentFetchPartitionResponse(Errors.NONE, epoch, OptionalInt.of(local.id()));
+        }
+
+        // Update voters so that they supports kraft version 1
+        for (var voter : List.of(voter1, voter2)) {
+            context.deliverRequest(
+                context.updateVoterRequest(
+                    voter,
+                    Feature.KRAFT_VERSION.supportedVersionRange(),
+                    startingVoters.listeners(voter.id())
+                )
+            );
+            context.pollUntilResponse();
+            context.assertSentUpdateVoterResponse(
+                Errors.NONE,
+                OptionalInt.of(local.id()),
+                epoch
+            );
+        }
+
+        context.client.upgradeKRaftVersion(epoch, KRaftVersion.KRAFT_VERSION_1, false);
+        assertEquals(KRaftVersion.KRAFT_VERSION_1, context.client.kraftVersion());
+
+        var localLogEndOffset = context.log.endOffset().offset();
+        context.client.poll();
+
+        // check if leader writes 2 control records to the log;
+        // one for the kraft version and one for the voter set
+        var updatedVoters = VoterSetTest.voterSet(Stream.of(local, voter1, voter2));
+        var records = context.log.read(localLogEndOffset, Isolation.UNCOMMITTED).records;
+        var batch = records.batches().iterator().next();
+        assertTrue(batch.isControlBatch());
+        var recordsIterator = batch.iterator();
+        var controlRecord = recordsIterator.next();
+        verifyKRaftVersionRecord(
+            KRaftVersion.KRAFT_VERSION_1.featureLevel(),
+            controlRecord.key(),
+            controlRecord.value()
+        );
+        controlRecord = recordsIterator.next();
+        verifyVotersRecord(updatedVoters, controlRecord.key(), controlRecord.value());
+    }
+
+    @Test
+    void testUpdateVoterAfterKRaftVersionUpgrade() throws Exception {
+        var local = replicaKey(randomReplicaId(), true);
+        var voter1 = replicaKey(local.id() + 1, true);
+        var voter2  = replicaKey(local.id() + 2, true);
+
+        VoterSet startingVoters = VoterSetTest.voterSet(
+            VoterSetTest.voterMap(IntStream.of(local.id(), voter1.id(), voter2.id()), false)
+        );
+
+        var context = new RaftClientTestContext.Builder(local.id(), local.directoryId().get())
+            .withRaftProtocol(RaftProtocol.KIP_853_PROTOCOL)
+            .withStartingVoters(startingVoters, KRaftVersion.KRAFT_VERSION_0)
+            .build();
+
+        context.unattachedToLeader();
+        var epoch = context.currentEpoch();
+
+        // Establish a HWM and fence previous leaders
+        for (var voter : List.of(voter1, voter2)) {
+            context.deliverRequest(
+                context.fetchRequest(epoch, voter, context.log.endOffset().offset(), epoch, 0)
+            );
+            context.pollUntilResponse();
+            context.assertSentFetchPartitionResponse(Errors.NONE, epoch, OptionalInt.of(local.id()));
+        }
+
+        // Update voters so that they supports kraft version 1
+        for (var voter : List.of(voter1, voter2)) {
+            context.deliverRequest(
+                context.updateVoterRequest(
+                    voter,
+                    Feature.KRAFT_VERSION.supportedVersionRange(),
+                    startingVoters.listeners(voter.id())
+                )
+            );
+            context.pollUntilResponse();
+            context.assertSentUpdateVoterResponse(
+                Errors.NONE,
+                OptionalInt.of(local.id()),
+                epoch
+            );
+        }
+
+        context.client.upgradeKRaftVersion(epoch, KRaftVersion.KRAFT_VERSION_1, false);
+        assertEquals(KRaftVersion.KRAFT_VERSION_1, context.client.kraftVersion());
+
+        // Push the control records to the log
+        context.client.poll();
+        // Advance the HWM to the LEO
+        for (var voter : List.of(voter1, voter2)) {
+            context.deliverRequest(
+                context.fetchRequest(epoch, voter, context.log.endOffset().offset(), epoch, 0)
+            );
+            context.pollUntilResponse();
+            context.assertSentFetchPartitionResponse(Errors.NONE, epoch, OptionalInt.of(local.id()));
+        }
+
+        // Check that it can still handle update voter request after upgrade
+        Endpoints newVoter1Listeners = Endpoints.fromInetSocketAddresses(
+            Map.of(
+                // first entry
+                context.channel.listenerName(),
+                InetSocketAddress.createUnresolved(
+                    "localhost",
+                    9990 + voter1.id()
+                ),
+                // second entry
+                ListenerName.normalised("ANOTHER_LISTENER"),
+                InetSocketAddress.createUnresolved(
+                    "localhost",
+                    8990 + voter1.id()
+                )
+            )
+        );
+        context.deliverRequest(
+            context.updateVoterRequest(
+                voter1,
+                Feature.KRAFT_VERSION.supportedVersionRange(),
+                newVoter1Listeners
+            )
+        );
+        context.pollUntilResponse();
+        context.assertSentUpdateVoterResponse(
+            Errors.NONE,
+            OptionalInt.of(local.id()),
+            epoch
+        );
+
+        // Push the control records to the log
+        var localLogEndOffset = context.log.endOffset().offset();
+        context.client.poll();
+
+        // check that the leader wrote voters control record to the log;
+        var records = context.log.read(localLogEndOffset, Isolation.UNCOMMITTED).records;
+        var batch = records.batches().iterator().next();
+        assertTrue(batch.isControlBatch());
+        var recordsIterator = batch.iterator();
+        var controlRecord = recordsIterator.next();
+        assertEquals(ControlRecordType.KRAFT_VOTERS, ControlRecordType.parse(controlRecord.key()));
+        ControlRecordUtils.deserializeVotersRecord(controlRecord.value());
+    }
+
+    @Test
+    void testInvalidKRaftUpgradeVersion() throws Exception {
+        var local = replicaKey(randomReplicaId(), true);
+        var voter1 = replicaKey(local.id() + 1, true);
+        var voter2  = replicaKey(local.id() + 2, true);
+
+        VoterSet startingVoters = VoterSetTest.voterSet(
+            VoterSetTest.voterMap(IntStream.of(local.id(), voter1.id(), voter2.id()), false)
+        );
+
+        var context = new RaftClientTestContext.Builder(local.id(), local.directoryId().get())
+            .withRaftProtocol(RaftProtocol.KIP_853_PROTOCOL)
+            .withStartingVoters(startingVoters, KRaftVersion.KRAFT_VERSION_0)
+            .build();
+
+        context.unattachedToLeader();
+        var epoch = context.currentEpoch();
+
+        // Upgrade not allowed since none of the remote voters support the new version
+        assertEquals(KRaftVersion.KRAFT_VERSION_0, context.client.kraftVersion());
+        assertThrows(
+            InvalidUpdateVersionException.class,
+            () -> context.client.upgradeKRaftVersion(epoch, KRaftVersion.KRAFT_VERSION_1, false)
+        );
+
+        // Establish a HWM and fence previous leaders
+        for (var voter : List.of(voter1, voter2)) {
+            context.deliverRequest(
+                context.fetchRequest(epoch, voter, context.log.endOffset().offset(), epoch, 0)
+            );
+            context.pollUntilResponse();
+            context.assertSentFetchPartitionResponse(Errors.NONE, epoch, OptionalInt.of(local.id()));
+        }
+
+        // Update only one of the voters so that they supports kraft version 1
+        context.deliverRequest(
+            context.updateVoterRequest(
+                voter1,
+                Feature.KRAFT_VERSION.supportedVersionRange(),
+                startingVoters.listeners(voter1.id())
+            )
+        );
+        context.pollUntilResponse();
+        context.assertSentUpdateVoterResponse(
+            Errors.NONE,
+            OptionalInt.of(local.id()),
+            epoch
+        );
+
+        // Upgrade not allowed since one of the voters doesn't support the new version
+        assertEquals(KRaftVersion.KRAFT_VERSION_0, context.client.kraftVersion());
+        assertThrows(
+            InvalidUpdateVersionException.class,
+            () -> context.client.upgradeKRaftVersion(epoch, KRaftVersion.KRAFT_VERSION_1, false)
+        );
+    }
+
     @Test
     void testFollowerSendsUpdateVoterWhenDifferent() throws Exception {
         ReplicaKey local = replicaKey(randomReplicaId(), true);
@@ -2164,8 +2637,8 @@ public class KafkaRaftClientReconfigTest {
             .withElectedLeader(epoch, voter1.id())
             .build();
 
-        // waiting for 3 times the fetch timeout sends an update voter
-        for (int i = 0; i < 3; i++) {
+        // waiting for FETCH request until the UpdateRaftVoter request is set
+        for (int i = 0; i < NUMBER_FETCH_TIMEOUTS_IN_UPDATE_PERIOD; i++) {
             context.time.sleep(context.fetchTimeoutMs - 1);
             context.pollUntilRequest();
             RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest();
@@ -2199,6 +2672,86 @@ public class KafkaRaftClientReconfigTest {
     }
 
     @Test
+    void testFollowerSendsUpdateVoterIfPendingFetchDuringTimeout() throws Exception {
+        ReplicaKey local = replicaKey(randomReplicaId(), true);
+        ReplicaKey voter1 = replicaKey(local.id() + 1, true);
+        ReplicaKey voter2 = replicaKey(local.id() + 2, true);
+
+        VoterSet voters = VoterSetTest.voterSet(Stream.of(local, voter1, voter2));
+        int epoch = 4;
+
+        HashMap<ListenerName, InetSocketAddress> listenersMap = new HashMap<>(2);
+        listenersMap.put(
+            VoterSetTest.DEFAULT_LISTENER_NAME,
+            InetSocketAddress.createUnresolved("localhost", 9990 + local.id())
+        );
+        listenersMap.put(
+            ListenerName.normalised("ANOTHER_LISTENER"),
+            InetSocketAddress.createUnresolved("localhost", 8990 + local.id())
+        );
+        Endpoints localListeners = Endpoints.fromInetSocketAddresses(listenersMap);
+
+        RaftClientTestContext context = new RaftClientTestContext.Builder(local.id(), local.directoryId().get())
+            .withKip853Rpc(true)
+            .withBootstrapSnapshot(Optional.of(voters))
+            .withElectedLeader(epoch, voter1.id())
+            .withLocalListeners(localListeners)
+            .build();
+
+        // waiting up to the last FETCH request before the UpdateRaftVoter request is set
+        for (int i = 0; i < NUMBER_FETCH_TIMEOUTS_IN_UPDATE_PERIOD; i++) {
+            context.time.sleep(context.fetchTimeoutMs - 1);
+            context.pollUntilRequest();
+            RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest();
+            context.assertFetchRequestData(fetchRequest, epoch, 0L, 0);
+
+            context.deliverResponse(
+                fetchRequest.correlationId(),
+                fetchRequest.destination(),
+                context.fetchResponse(
+                    epoch,
+                    voter1.id(),
+                    MemoryRecords.EMPTY,
+                    0L,
+                    Errors.NONE
+                )
+            );
+            // poll kraft to handle the fetch response
+            context.client.poll();
+        }
+
+        // expect one last FETCH request
+        context.pollUntilRequest();
+        RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest();
+        context.assertFetchRequestData(fetchRequest, epoch, 0L, 0);
+
+        // don't send a response but increase the time
+        context.time.sleep(context.requestTimeoutMs() - 1);
+        context.client.poll();
+        assertFalse(context.channel.hasSentRequests());
+
+        // expect an update voter request after the FETCH rpc completes
+        context.deliverResponse(
+            fetchRequest.correlationId(),
+            fetchRequest.destination(),
+            context.fetchResponse(
+                epoch,
+                voter1.id(),
+                MemoryRecords.EMPTY,
+                0L,
+                Errors.NONE
+            )
+        );
+        context.pollUntilRequest();
+        context.assertSentUpdateVoterRequest(
+            local,
+            epoch,
+            Feature.KRAFT_VERSION.supportedVersionRange(),
+            localListeners
+        );
+    }
+
+    @Test
     void testUpdateVoterResponseCausesEpochChange() throws Exception {
         ReplicaKey local = replicaKey(randomReplicaId(), true);
         ReplicaKey voter1 = replicaKey(local.id() + 1, true);
@@ -2225,8 +2778,8 @@ public class KafkaRaftClientReconfigTest {
             .withLocalListeners(localListeners)
             .build();
 
-        // waiting for 3 times the fetch timeout sends an update voter
-        for (int i = 0; i < 3; i++) {
+        // waiting for FETCH request until the UpdateRaftVoter request is set
+        for (int i = 0; i < NUMBER_FETCH_TIMEOUTS_IN_UPDATE_PERIOD; i++) {
             context.time.sleep(context.fetchTimeoutMs - 1);
             context.pollUntilRequest();
             RaftRequest.Outbound fetchRequest = context.assertSentFetchRequest();
@@ -2281,7 +2834,7 @@ public class KafkaRaftClientReconfigTest {
             .withKip853Rpc(true)
             .withBootstrapSnapshot(Optional.empty())
             .withUnknownLeader(epoch)
-            .withBootstrapServers(Optional.of(Collections.singletonList(bootstrapAddress)))
+            .withBootstrapServers(Optional.of(List.of(bootstrapAddress)))
             .build();
 
         context.pollUntilRequest();
@@ -2353,7 +2906,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
