@@ -24,6 +24,7 @@ import org.apache.kafka.common.TopicIdPartition;
 import org.apache.kafka.common.Uuid;
 import org.apache.kafka.common.message.DeleteShareGroupStateRequestData;
 import org.apache.kafka.common.message.FindCoordinatorResponseData;
+import org.apache.kafka.common.message.InitializeShareGroupStateRequestData;
 import org.apache.kafka.common.message.ReadShareGroupStateRequestData;
 import org.apache.kafka.common.message.ReadShareGroupStateResponseData;
 import org.apache.kafka.common.message.ReadShareGroupStateSummaryRequestData;
@@ -33,6 +34,8 @@ import org.apache.kafka.common.requests.DeleteShareGroupStateRequest;
 import org.apache.kafka.common.requests.DeleteShareGroupStateResponse;
 import org.apache.kafka.common.requests.FindCoordinatorRequest;
 import org.apache.kafka.common.requests.FindCoordinatorResponse;
+import org.apache.kafka.common.requests.InitializeShareGroupStateRequest;
+import org.apache.kafka.common.requests.InitializeShareGroupStateResponse;
 import org.apache.kafka.common.requests.ReadShareGroupStateRequest;
 import org.apache.kafka.common.requests.ReadShareGroupStateResponse;
 import org.apache.kafka.common.requests.ReadShareGroupStateSummaryRequest;
@@ -47,8 +50,6 @@ import org.apache.kafka.server.util.timer.Timer;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -124,7 +125,7 @@ class DefaultStatePersisterTest {
 
             @Override
             public List<Node> getClusterNodes() {
-                return Collections.singletonList(suppliedNode);
+                return List.of(suppliedNode);
             }
         };
     }
@@ -142,14 +143,14 @@ class DefaultStatePersisterTest {
         CompletableFuture<WriteShareGroupStateResult> result = defaultStatePersister.writeState(null);
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // groupTopicPartitionData is null
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
         result = defaultStatePersister.writeState(new WriteShareGroupStateParameters.Builder().setGroupTopicPartitionData(null).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // groupId is null
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
@@ -158,51 +159,51 @@ class DefaultStatePersisterTest {
                 .setGroupId(null).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // topicsData is empty
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
         result = defaultStatePersister.writeState(new WriteShareGroupStateParameters.Builder()
             .setGroupTopicPartitionData(new GroupTopicPartitionData.Builder<PartitionStateBatchData>()
                 .setGroupId(groupId)
-                .setTopicsData(Collections.emptyList()).build()).build());
+                .setTopicsData(List.of()).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // topicId is null
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
         result = defaultStatePersister.writeState(new WriteShareGroupStateParameters.Builder()
             .setGroupTopicPartitionData(new GroupTopicPartitionData.Builder<PartitionStateBatchData>()
                 .setGroupId(groupId)
-                .setTopicsData(Collections.singletonList(new TopicData<>(null,
-                    Collections.singletonList(PartitionFactory.newPartitionStateBatchData(
+                .setTopicsData(List.of(new TopicData<>(null,
+                    List.of(PartitionFactory.newPartitionStateBatchData(
                         partition, 1, 0, 0, null))))).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // partitionData is empty
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
         result = defaultStatePersister.writeState(new WriteShareGroupStateParameters.Builder()
             .setGroupTopicPartitionData(new GroupTopicPartitionData.Builder<PartitionStateBatchData>()
                 .setGroupId(groupId)
-                .setTopicsData(Collections.singletonList(new TopicData<>(topicId, Collections.emptyList()))).build()).build());
+                .setTopicsData(List.of(new TopicData<>(topicId, List.of()))).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // partition value is incorrect
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
         result = defaultStatePersister.writeState(new WriteShareGroupStateParameters.Builder()
             .setGroupTopicPartitionData(new GroupTopicPartitionData.Builder<PartitionStateBatchData>()
                 .setGroupId(groupId)
-                .setTopicsData(Collections.singletonList(new TopicData<>(topicId,
-                    Collections.singletonList(PartitionFactory.newPartitionStateBatchData(
+                .setTopicsData(List.of(new TopicData<>(topicId,
+                    List.of(PartitionFactory.newPartitionStateBatchData(
                         incorrectPartition, 1, 0, 0, null))))).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
     }
 
     @Test
@@ -218,14 +219,14 @@ class DefaultStatePersisterTest {
         CompletableFuture<ReadShareGroupStateResult> result = defaultStatePersister.readState(null);
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // groupTopicPartitionData is null
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
         result = defaultStatePersister.readState(new ReadShareGroupStateParameters.Builder().setGroupTopicPartitionData(null).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // groupId is null
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
@@ -234,50 +235,50 @@ class DefaultStatePersisterTest {
                 .setGroupId(null).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // topicsData is empty
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
         result = defaultStatePersister.readState(new ReadShareGroupStateParameters.Builder()
             .setGroupTopicPartitionData(new GroupTopicPartitionData.Builder<PartitionIdLeaderEpochData>()
                 .setGroupId(groupId)
-                .setTopicsData(Collections.emptyList()).build()).build());
+                .setTopicsData(List.of()).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // topicId is null
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
         result = defaultStatePersister.readState(new ReadShareGroupStateParameters.Builder()
             .setGroupTopicPartitionData(new GroupTopicPartitionData.Builder<PartitionIdLeaderEpochData>()
                 .setGroupId(groupId)
-                .setTopicsData(Collections.singletonList(new TopicData<>(null,
-                    Collections.singletonList(PartitionFactory.newPartitionIdLeaderEpochData(partition, 1))))
+                .setTopicsData(List.of(new TopicData<>(null,
+                    List.of(PartitionFactory.newPartitionIdLeaderEpochData(partition, 1))))
                 ).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // partitionData is empty
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
         result = defaultStatePersister.readState(new ReadShareGroupStateParameters.Builder()
             .setGroupTopicPartitionData(new GroupTopicPartitionData.Builder<PartitionIdLeaderEpochData>()
                 .setGroupId(groupId)
-                .setTopicsData(Collections.singletonList(new TopicData<>(topicId, Collections.emptyList()))).build()).build());
+                .setTopicsData(List.of(new TopicData<>(topicId, List.of()))).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // partition value is incorrect
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
         result = defaultStatePersister.readState(new ReadShareGroupStateParameters.Builder()
             .setGroupTopicPartitionData(new GroupTopicPartitionData.Builder<PartitionIdLeaderEpochData>()
                 .setGroupId(groupId)
-                .setTopicsData(Collections.singletonList(new TopicData<>(topicId,
-                    Collections.singletonList(PartitionFactory.newPartitionIdLeaderEpochData(incorrectPartition, 1))))).build()).build());
+                .setTopicsData(List.of(new TopicData<>(topicId,
+                    List.of(PartitionFactory.newPartitionIdLeaderEpochData(incorrectPartition, 1))))).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
     }
 
     @Test
@@ -293,14 +294,14 @@ class DefaultStatePersisterTest {
         CompletableFuture<ReadShareGroupStateSummaryResult> result = defaultStatePersister.readSummary(null);
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // groupTopicPartitionData is null
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
         result = defaultStatePersister.readSummary(new ReadShareGroupStateSummaryParameters.Builder().setGroupTopicPartitionData(null).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // groupId is null
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
@@ -309,17 +310,17 @@ class DefaultStatePersisterTest {
                 .setGroupId(null).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // topicsData is empty
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
         result = defaultStatePersister.readSummary(new ReadShareGroupStateSummaryParameters.Builder()
             .setGroupTopicPartitionData(new GroupTopicPartitionData.Builder<PartitionIdLeaderEpochData>()
                 .setGroupId(groupId)
-                .setTopicsData(Collections.emptyList()).build()).build());
+                .setTopicsData(List.of()).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // topicId is null
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
@@ -331,17 +332,17 @@ class DefaultStatePersisterTest {
                 ).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // partitionData is empty
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
         result = defaultStatePersister.readSummary(new ReadShareGroupStateSummaryParameters.Builder()
             .setGroupTopicPartitionData(new GroupTopicPartitionData.Builder<PartitionIdLeaderEpochData>()
                 .setGroupId(groupId)
-                .setTopicsData(List.of(new TopicData<>(topicId, Collections.emptyList()))).build()).build());
+                .setTopicsData(List.of(new TopicData<>(topicId, List.of()))).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // partition value is incorrect
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
@@ -352,7 +353,7 @@ class DefaultStatePersisterTest {
                     List.of(PartitionFactory.newPartitionIdLeaderEpochData(incorrectPartition, 1))))).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
     }
 
     @Test
@@ -367,14 +368,14 @@ class DefaultStatePersisterTest {
         CompletableFuture<DeleteShareGroupStateResult> result = defaultStatePersister.deleteState(null);
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // groupTopicPartitionData is null
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
         result = defaultStatePersister.deleteState(new DeleteShareGroupStateParameters.Builder().setGroupTopicPartitionData(null).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // groupId is null
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
@@ -383,7 +384,7 @@ class DefaultStatePersisterTest {
                 .setGroupId(null).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // topicsData is empty
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
@@ -393,7 +394,7 @@ class DefaultStatePersisterTest {
                 .setTopicsData(List.of()).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // topicId is null
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
@@ -401,11 +402,11 @@ class DefaultStatePersisterTest {
             .setGroupTopicPartitionData(new GroupTopicPartitionData.Builder<PartitionIdData>()
                 .setGroupId(groupId)
                 .setTopicsData(List.of(new TopicData<>(null,
-                    List.of(PartitionFactory.newPartitionStateBatchData(
-                        partition, 1, 0, 0, null))))).build()).build());
+                    List.of(PartitionFactory.newPartitionIdData(
+                        partition))))).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // partitionData is empty
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
@@ -415,7 +416,7 @@ class DefaultStatePersisterTest {
                 .setTopicsData(List.of(new TopicData<>(topicId, List.of()))).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
 
         // partition value is incorrect
         defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
@@ -427,7 +428,82 @@ class DefaultStatePersisterTest {
                         incorrectPartition))))).build()).build());
         assertTrue(result.isDone());
         assertTrue(result.isCompletedExceptionally());
-        assertFutureThrows(result, IllegalArgumentException.class);
+        assertFutureThrows(IllegalArgumentException.class, result);
+    }
+
+    @Test
+    public void testInitializeStateValidate() {
+        String groupId = "group1";
+        Uuid topicId = Uuid.randomUuid();
+        int partition = 0;
+        int incorrectPartition = -1;
+
+        // Request Parameters are null
+        DefaultStatePersister defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
+        CompletableFuture<InitializeShareGroupStateResult> result = defaultStatePersister.initializeState(null);
+        assertTrue(result.isDone());
+        assertTrue(result.isCompletedExceptionally());
+        assertFutureThrows(IllegalArgumentException.class, result);
+
+        // groupTopicPartitionData is null
+        defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
+        result = defaultStatePersister.initializeState(new InitializeShareGroupStateParameters.Builder().setGroupTopicPartitionData(null).build());
+        assertTrue(result.isDone());
+        assertTrue(result.isCompletedExceptionally());
+        assertFutureThrows(IllegalArgumentException.class, result);
+
+        // groupId is null
+        defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
+        result = defaultStatePersister.initializeState(new InitializeShareGroupStateParameters.Builder()
+            .setGroupTopicPartitionData(new GroupTopicPartitionData.Builder<PartitionStateData>()
+                .setGroupId(null).build()).build());
+        assertTrue(result.isDone());
+        assertTrue(result.isCompletedExceptionally());
+        assertFutureThrows(IllegalArgumentException.class, result);
+
+        // topicsData is empty
+        defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
+        result = defaultStatePersister.initializeState(new InitializeShareGroupStateParameters.Builder()
+            .setGroupTopicPartitionData(new GroupTopicPartitionData.Builder<PartitionStateData>()
+                .setGroupId(groupId)
+                .setTopicsData(List.of()).build()).build());
+        assertTrue(result.isDone());
+        assertTrue(result.isCompletedExceptionally());
+        assertFutureThrows(IllegalArgumentException.class, result);
+
+        // topicId is null
+        defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
+        result = defaultStatePersister.initializeState(new InitializeShareGroupStateParameters.Builder()
+            .setGroupTopicPartitionData(new GroupTopicPartitionData.Builder<PartitionStateData>()
+                .setGroupId(groupId)
+                .setTopicsData(List.of(new TopicData<>(null,
+                    List.of(PartitionFactory.newPartitionStateData(
+                        partition, 1, 0))))).build()).build());
+        assertTrue(result.isDone());
+        assertTrue(result.isCompletedExceptionally());
+        assertFutureThrows(IllegalArgumentException.class, result);
+
+        // partitionData is empty
+        defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
+        result = defaultStatePersister.initializeState(new InitializeShareGroupStateParameters.Builder()
+            .setGroupTopicPartitionData(new GroupTopicPartitionData.Builder<PartitionStateData>()
+                .setGroupId(groupId)
+                .setTopicsData(List.of(new TopicData<>(topicId, List.of()))).build()).build());
+        assertTrue(result.isDone());
+        assertTrue(result.isCompletedExceptionally());
+        assertFutureThrows(IllegalArgumentException.class, result);
+
+        // partition value is incorrect
+        defaultStatePersister = DefaultStatePersisterBuilder.builder().build();
+        result = defaultStatePersister.initializeState(new InitializeShareGroupStateParameters.Builder()
+            .setGroupTopicPartitionData(new GroupTopicPartitionData.Builder<PartitionStateData>()
+                .setGroupId(groupId)
+                .setTopicsData(List.of(new TopicData<>(topicId,
+                    List.of(PartitionFactory.newPartitionStateData(
+                        incorrectPartition, 0, 0))))).build()).build());
+        assertTrue(result.isDone());
+        assertTrue(result.isCompletedExceptionally());
+        assertFutureThrows(IllegalArgumentException.class, result);
     }
 
     @Test
@@ -454,7 +530,7 @@ class DefaultStatePersisterTest {
                 && ((FindCoordinatorRequest) body).data().coordinatorKeys().get(0).equals(coordinatorKey1),
             new FindCoordinatorResponse(
                 new FindCoordinatorResponseData()
-                    .setCoordinators(Collections.singletonList(
+                    .setCoordinators(List.of(
                         new FindCoordinatorResponseData.Coordinator()
                             .setNodeId(5)
                             .setHost(HOST)
@@ -470,7 +546,7 @@ class DefaultStatePersisterTest {
                 && ((FindCoordinatorRequest) body).data().coordinatorKeys().get(0).equals(coordinatorKey2),
             new FindCoordinatorResponse(
                 new FindCoordinatorResponseData()
-                    .setCoordinators(Collections.singletonList(
+                    .setCoordinators(List.of(
                         new FindCoordinatorResponseData.Coordinator()
                             .setNodeId(6)
                             .setHost(HOST)
@@ -515,16 +591,16 @@ class DefaultStatePersisterTest {
         WriteShareGroupStateParameters request = WriteShareGroupStateParameters.from(
             new WriteShareGroupStateRequestData()
                 .setGroupId(groupId)
-                .setTopics(Arrays.asList(
+                .setTopics(List.of(
                     new WriteShareGroupStateRequestData.WriteStateData()
                         .setTopicId(topicId1)
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new WriteShareGroupStateRequestData.PartitionData()
                                 .setPartition(partition1)
                                 .setStateEpoch(0)
                                 .setLeaderEpoch(1)
                                 .setStartOffset(0)
-                                .setStateBatches(Collections.singletonList(new WriteShareGroupStateRequestData.StateBatch()
+                                .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
                                     .setFirstOffset(0)
                                     .setLastOffset(10)
                                     .setDeliveryCount((short) 1)
@@ -532,13 +608,13 @@ class DefaultStatePersisterTest {
                         )),
                     new WriteShareGroupStateRequestData.WriteStateData()
                         .setTopicId(topicId2)
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new WriteShareGroupStateRequestData.PartitionData()
                                 .setPartition(partition2)
                                 .setStateEpoch(0)
                                 .setLeaderEpoch(1)
                                 .setStartOffset(0)
-                                .setStateBatches(Arrays.asList(
+                                .setStateBatches(List.of(
                                     new WriteShareGroupStateRequestData.StateBatch()
                                         .setFirstOffset(0)
                                         .setLastOffset(10)
@@ -604,7 +680,7 @@ class DefaultStatePersisterTest {
                 && ((FindCoordinatorRequest) body).data().coordinatorKeys().get(0).equals(coordinatorKey1),
             new FindCoordinatorResponse(
                 new FindCoordinatorResponseData()
-                    .setCoordinators(Collections.singletonList(
+                    .setCoordinators(List.of(
                         new FindCoordinatorResponseData.Coordinator()
                             .setNodeId(5)
                             .setHost(HOST)
@@ -620,7 +696,7 @@ class DefaultStatePersisterTest {
                 && ((FindCoordinatorRequest) body).data().coordinatorKeys().get(0).equals(coordinatorKey2),
             new FindCoordinatorResponse(
                 new FindCoordinatorResponseData()
-                    .setCoordinators(Collections.singletonList(
+                    .setCoordinators(List.of(
                         new FindCoordinatorResponseData.Coordinator()
                             .setNodeId(6)
                             .setHost(HOST)
@@ -641,7 +717,7 @@ class DefaultStatePersisterTest {
                 return requestGroupId.equals(groupId) && requestTopicId == topicId1 && requestPartition == partition1;
             },
             new ReadShareGroupStateResponse(ReadShareGroupStateResponse.toResponseData(topicId1, partition1, 0, 1,
-                Collections.singletonList(new ReadShareGroupStateResponseData.StateBatch()
+                List.of(new ReadShareGroupStateResponseData.StateBatch()
                     .setFirstOffset(0)
                     .setLastOffset(10)
                     .setDeliveryCount((short) 1)
@@ -658,7 +734,7 @@ class DefaultStatePersisterTest {
                 return requestGroupId.equals(groupId) && requestTopicId == topicId2 && requestPartition == partition2;
             },
             new ReadShareGroupStateResponse(ReadShareGroupStateResponse.toResponseData(topicId2, partition2, 0, 1,
-                Arrays.asList(new ReadShareGroupStateResponseData.StateBatch()
+                List.of(new ReadShareGroupStateResponseData.StateBatch()
                         .setFirstOffset(0)
                         .setLastOffset(10)
                         .setDeliveryCount((short) 1)
@@ -680,17 +756,17 @@ class DefaultStatePersisterTest {
         ReadShareGroupStateParameters request = ReadShareGroupStateParameters.from(
             new ReadShareGroupStateRequestData()
                 .setGroupId(groupId)
-                .setTopics(Arrays.asList(
+                .setTopics(List.of(
                     new ReadShareGroupStateRequestData.ReadStateData()
                         .setTopicId(topicId1)
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new ReadShareGroupStateRequestData.PartitionData()
                                 .setPartition(partition1)
                                 .setLeaderEpoch(1)
                         )),
                     new ReadShareGroupStateRequestData.ReadStateData()
                         .setTopicId(topicId2)
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new ReadShareGroupStateRequestData.PartitionData()
                                 .setPartition(partition2)
                                 .setLeaderEpoch(1)
@@ -718,12 +794,12 @@ class DefaultStatePersisterTest {
         HashSet<PartitionData> expectedResultMap = new HashSet<>();
         expectedResultMap.add(
             (PartitionData) PartitionFactory.newPartitionAllData(partition1, 1, 0, Errors.NONE.code(),
-                null, Collections.singletonList(new PersisterStateBatch(0, 10, (byte) 0, (short) 1)
+                null, List.of(new PersisterStateBatch(0, 10, (byte) 0, (short) 1)
                 )));
 
         expectedResultMap.add(
             (PartitionData) PartitionFactory.newPartitionAllData(partition2, 1, 0, Errors.NONE.code(),
-                null, Arrays.asList(
+                null, List.of(
                     new PersisterStateBatch(0, 10, (byte) 0, (short) 1),
                     new PersisterStateBatch(11, 20, (byte) 0, (short) 1)
                 )));
@@ -817,7 +893,7 @@ class DefaultStatePersisterTest {
         ReadShareGroupStateSummaryParameters request = ReadShareGroupStateSummaryParameters.from(
             new ReadShareGroupStateSummaryRequestData()
                 .setGroupId(groupId)
-                .setTopics(Arrays.asList(
+                .setTopics(List.of(
                     new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
                         .setTopicId(topicId1)
                         .setPartitions(List.of(
@@ -997,6 +1073,143 @@ class DefaultStatePersisterTest {
     }
 
     @Test
+    public void testInitializeStateSuccess() {
+        MockClient client = new MockClient(MOCK_TIME);
+
+        String groupId = "group1";
+        Uuid topicId1 = Uuid.randomUuid();
+        int partition1 = 10;
+        int stateEpoch1 = 1;
+        long startOffset1 = 10;
+
+        Uuid topicId2 = Uuid.randomUuid();
+        int partition2 = 8;
+        int stateEpoch2 = 1;
+        long startOffset2 = 5;
+
+        Node suppliedNode = new Node(0, HOST, PORT);
+        Node coordinatorNode1 = new Node(5, HOST, PORT);
+        Node coordinatorNode2 = new Node(6, HOST, PORT);
+
+        String coordinatorKey1 = SharePartitionKey.asCoordinatorKey(groupId, topicId1, partition1);
+        String coordinatorKey2 = SharePartitionKey.asCoordinatorKey(groupId, topicId2, partition2);
+
+        client.prepareResponseFrom(body -> body instanceof FindCoordinatorRequest
+                && ((FindCoordinatorRequest) body).data().keyType() == FindCoordinatorRequest.CoordinatorType.SHARE.id()
+                && ((FindCoordinatorRequest) body).data().coordinatorKeys().get(0).equals(coordinatorKey1),
+            new FindCoordinatorResponse(
+                new FindCoordinatorResponseData()
+                    .setCoordinators(List.of(
+                        new FindCoordinatorResponseData.Coordinator()
+                            .setNodeId(coordinatorNode1.id())
+                            .setHost(HOST)
+                            .setPort(PORT)
+                            .setErrorCode(Errors.NONE.code())
+                    ))
+            ),
+            suppliedNode
+        );
+
+        client.prepareResponseFrom(body -> body instanceof FindCoordinatorRequest
+                && ((FindCoordinatorRequest) body).data().keyType() == FindCoordinatorRequest.CoordinatorType.SHARE.id()
+                && ((FindCoordinatorRequest) body).data().coordinatorKeys().get(0).equals(coordinatorKey2),
+            new FindCoordinatorResponse(
+                new FindCoordinatorResponseData()
+                    .setCoordinators(List.of(
+                        new FindCoordinatorResponseData.Coordinator()
+                            .setNodeId(coordinatorNode2.id())
+                            .setHost(HOST)
+                            .setPort(PORT)
+                            .setErrorCode(Errors.NONE.code())
+                    ))
+            ),
+            suppliedNode
+        );
+
+        client.prepareResponseFrom(
+            body -> {
+                InitializeShareGroupStateRequest request = (InitializeShareGroupStateRequest) body;
+                String requestGroupId = request.data().groupId();
+                Uuid requestTopicId = request.data().topics().get(0).topicId();
+                int requestPartition = request.data().topics().get(0).partitions().get(0).partition();
+
+                return requestGroupId.equals(groupId) && requestTopicId == topicId1 && requestPartition == partition1;
+            },
+            new InitializeShareGroupStateResponse(InitializeShareGroupStateResponse.toResponseData(topicId1, partition1)),
+            coordinatorNode1
+        );
+
+        client.prepareResponseFrom(
+            body -> {
+                InitializeShareGroupStateRequest request = (InitializeShareGroupStateRequest) body;
+                String requestGroupId = request.data().groupId();
+                Uuid requestTopicId = request.data().topics().get(0).topicId();
+                int requestPartition = request.data().topics().get(0).partitions().get(0).partition();
+
+                return requestGroupId.equals(groupId) && requestTopicId == topicId2 && requestPartition == partition2;
+            },
+            new InitializeShareGroupStateResponse(InitializeShareGroupStateResponse.toResponseData(topicId2, partition2)),
+            coordinatorNode2
+        );
+
+        ShareCoordinatorMetadataCacheHelper cacheHelper = getDefaultCacheHelper(suppliedNode);
+
+        DefaultStatePersister defaultStatePersister = DefaultStatePersisterBuilder.builder()
+            .withKafkaClient(client)
+            .withCacheHelper(cacheHelper)
+            .build();
+
+        InitializeShareGroupStateParameters request = InitializeShareGroupStateParameters.from(
+            new InitializeShareGroupStateRequestData()
+                .setGroupId(groupId)
+                .setTopics(List.of(
+                    new InitializeShareGroupStateRequestData.InitializeStateData()
+                        .setTopicId(topicId1)
+                        .setPartitions(List.of(
+                            new InitializeShareGroupStateRequestData.PartitionData()
+                                .setPartition(partition1)
+                                .setStateEpoch(stateEpoch1)
+                                .setStartOffset(startOffset1)
+                        )),
+                    new InitializeShareGroupStateRequestData.InitializeStateData()
+                        .setTopicId(topicId2)
+                        .setPartitions(List.of(
+                            new InitializeShareGroupStateRequestData.PartitionData()
+                                .setPartition(partition2)
+                                .setStateEpoch(stateEpoch2)
+                                .setStartOffset(startOffset2)
+                        ))
+                ))
+        );
+
+        CompletableFuture<InitializeShareGroupStateResult> resultFuture = defaultStatePersister.initializeState(request);
+
+        InitializeShareGroupStateResult result = null;
+        try {
+            // adding long delay to allow for environment/GC issues
+            result = resultFuture.get(10L, TimeUnit.SECONDS);
+        } catch (Exception e) {
+            fail("Unexpected exception", e);
+        }
+
+        HashSet<PartitionData> resultMap = new HashSet<>();
+        result.topicsData().forEach(
+            topicData -> topicData.partitions().forEach(
+                partitionData -> resultMap.add((PartitionData) partitionData)
+            )
+        );
+
+
+        HashSet<PartitionData> expectedResultMap = new HashSet<>();
+        expectedResultMap.add((PartitionData) PartitionFactory.newPartitionErrorData(partition1, Errors.NONE.code(), null));
+
+        expectedResultMap.add((PartitionData) PartitionFactory.newPartitionErrorData(partition2, Errors.NONE.code(), null));
+
+        assertEquals(2, result.topicsData().size());
+        assertEquals(expectedResultMap, resultMap);
+    }
+
+    @Test
     public void testWriteStateResponseToResultPartialResults() {
         Map<Uuid, Map<Integer, CompletableFuture<WriteShareGroupStateResponse>>> futureMap = new HashMap<>();
         TopicIdPartition tp1 = new TopicIdPartition(Uuid.randomUuid(), 1, null);
@@ -1039,7 +1252,7 @@ class DefaultStatePersisterTest {
             results.topicsData().contains(
                 new TopicData<>(
                     tp1.topicId(),
-                    Collections.singletonList(PartitionFactory.newPartitionErrorData(tp1.partition(), Errors.NONE.code(), null))
+                    List.of(PartitionFactory.newPartitionErrorData(tp1.partition(), Errors.NONE.code(), null))
                 )
             )
         );
@@ -1047,7 +1260,7 @@ class DefaultStatePersisterTest {
             results.topicsData().contains(
                 new TopicData<>(
                     tp2.topicId(),
-                    Collections.singletonList(PartitionFactory.newPartitionErrorData(tp2.partition(), Errors.UNKNOWN_TOPIC_OR_PARTITION.code(), "unknown tp"))
+                    List.of(PartitionFactory.newPartitionErrorData(tp2.partition(), Errors.UNKNOWN_TOPIC_OR_PARTITION.code(), "unknown tp"))
                 )
             )
         );
@@ -1086,7 +1299,7 @@ class DefaultStatePersisterTest {
             results.topicsData().contains(
                 new TopicData<>(
                     tp1.topicId(),
-                    Collections.singletonList(PartitionFactory.newPartitionErrorData(tp1.partition(), Errors.NONE.code(), null))
+                    List.of(PartitionFactory.newPartitionErrorData(tp1.partition(), Errors.NONE.code(), null))
                 )
             )
         );
@@ -1094,7 +1307,7 @@ class DefaultStatePersisterTest {
             results.topicsData().contains(
                 new TopicData<>(
                     tp2.topicId(),
-                    Collections.singletonList(PartitionFactory.newPartitionErrorData(tp2.partition(), Errors.UNKNOWN_SERVER_ERROR.code(), "Error writing state to share coordinator: java.lang.Exception: scary stuff"))
+                    List.of(PartitionFactory.newPartitionErrorData(tp2.partition(), Errors.UNKNOWN_SERVER_ERROR.code(), "Error writing state to share coordinator: java.lang.Exception: scary stuff"))
                 )
             )
         );
@@ -1115,7 +1328,7 @@ class DefaultStatePersisterTest {
                             tp1.partition(),
                             1L,
                             2,
-                            Collections.emptyList()
+                            List.of()
                         )
                     )
                 )
@@ -1146,7 +1359,7 @@ class DefaultStatePersisterTest {
             results.topicsData().contains(
                 new TopicData<>(
                     tp1.topicId(),
-                    Collections.singletonList(PartitionFactory.newPartitionAllData(tp1.partition(), 2, 1L, Errors.NONE.code(), null, Collections.emptyList()))
+                    List.of(PartitionFactory.newPartitionAllData(tp1.partition(), 2, 1L, Errors.NONE.code(), null, List.of()))
                 )
             )
         );
@@ -1154,7 +1367,7 @@ class DefaultStatePersisterTest {
             results.topicsData().contains(
                 new TopicData<>(
                     tp2.topicId(),
-                    Collections.singletonList(PartitionFactory.newPartitionAllData(tp2.partition(), 0, 0, Errors.UNKNOWN_TOPIC_OR_PARTITION.code(), "unknown tp", Collections.emptyList()))
+                    List.of(PartitionFactory.newPartitionAllData(tp2.partition(), 0, 0, Errors.UNKNOWN_TOPIC_OR_PARTITION.code(), "unknown tp", List.of()))
                 )
             )
         );
@@ -1175,7 +1388,7 @@ class DefaultStatePersisterTest {
                             tp1.partition(),
                             1L,
                             2,
-                            Collections.emptyList()
+                            List.of()
                         )
                     )
                 )
@@ -1196,7 +1409,7 @@ class DefaultStatePersisterTest {
             results.topicsData().contains(
                 new TopicData<>(
                     tp1.topicId(),
-                    Collections.singletonList(PartitionFactory.newPartitionAllData(tp1.partition(), 2, 1L, Errors.NONE.code(), null, Collections.emptyList()))
+                    List.of(PartitionFactory.newPartitionAllData(tp1.partition(), 2, 1L, Errors.NONE.code(), null, List.of()))
                 )
             )
         );
@@ -1204,7 +1417,7 @@ class DefaultStatePersisterTest {
             results.topicsData().contains(
                 new TopicData<>(
                     tp2.topicId(),
-                    Collections.singletonList(PartitionFactory.newPartitionAllData(tp2.partition(), -1, -1L, Errors.UNKNOWN_SERVER_ERROR.code(), "Error reading state from share coordinator: java.lang.Exception: scary stuff", Collections.emptyList()))
+                    List.of(PartitionFactory.newPartitionAllData(tp2.partition(), -1, -1L, Errors.UNKNOWN_SERVER_ERROR.code(), "Error reading state from share coordinator: java.lang.Exception: scary stuff", List.of()))
                 )
             )
         );
@@ -1382,16 +1595,12 @@ class DefaultStatePersisterTest {
         TopicIdPartition tp2 = new TopicIdPartition(Uuid.randomUuid(), 1, null);
 
         // one entry has valid results
-        futureMap.computeIfAbsent(tp1.topicId(), k -> new HashMap<>())
-            .put(tp1.partition(), CompletableFuture.completedFuture(
-                    new DeleteShareGroupStateResponse(
-                        DeleteShareGroupStateResponse.toResponseData(
-                            tp1.topicId(),
-                            tp1.partition()
-                        )
-                    )
-                )
-            );
+        futureMap.computeIfAbsent(tp1.topicId(), k -> new HashMap<>()).put(tp1.partition(), CompletableFuture.completedFuture(
+            new DeleteShareGroupStateResponse(DeleteShareGroupStateResponse.toResponseData(
+                tp1.topicId(),
+                tp1.partition()
+            ))
+        ));
 
         // one entry has failed future
         futureMap.computeIfAbsent(tp2.topicId(), k -> new HashMap<>())
@@ -1417,6 +1626,101 @@ class DefaultStatePersisterTest {
                 new TopicData<>(
                     tp2.topicId(),
                     List.of(PartitionFactory.newPartitionErrorData(tp2.partition(), Errors.UNKNOWN_SERVER_ERROR.code(), "Error deleting state from share coordinator: java.lang.Exception: scary stuff"))
+                )
+            )
+        );
+    }
+
+    @Test
+    public void testInitializeStateResponseToResultPartialResults() {
+        Map<Uuid, Map<Integer, CompletableFuture<InitializeShareGroupStateResponse>>> futureMap = new HashMap<>();
+        TopicIdPartition tp1 = new TopicIdPartition(Uuid.randomUuid(), 1, null);
+        TopicIdPartition tp2 = new TopicIdPartition(Uuid.randomUuid(), 1, null);
+
+        // one entry has valid results
+        futureMap.computeIfAbsent(tp1.topicId(), k -> new HashMap<>()).put(tp1.partition(), CompletableFuture.completedFuture(
+            new InitializeShareGroupStateResponse(
+                InitializeShareGroupStateResponse.toResponseData(
+                    tp1.topicId(),
+                    tp1.partition()
+                ))
+        ));
+
+        // one entry has error
+        futureMap.computeIfAbsent(tp2.topicId(), k -> new HashMap<>()).put(tp2.partition(), CompletableFuture.completedFuture(
+            new InitializeShareGroupStateResponse(
+                InitializeShareGroupStateResponse.toErrorResponseData(
+                    tp2.topicId(),
+                    tp2.partition(),
+                    Errors.UNKNOWN_TOPIC_OR_PARTITION,
+                    "unknown tp"
+                ))
+        ));
+
+        PersisterStateManager psm = mock(PersisterStateManager.class);
+        DefaultStatePersister dsp = new DefaultStatePersister(psm);
+
+        InitializeShareGroupStateResult results = dsp.initializeResponsesToResult(futureMap);
+
+        // results should contain partial results
+        assertEquals(2, results.topicsData().size());
+        assertTrue(
+            results.topicsData().contains(
+                new TopicData<>(
+                    tp1.topicId(),
+                    List.of(PartitionFactory.newPartitionErrorData(tp1.partition(), Errors.NONE.code(), null))
+                )
+            )
+        );
+        assertTrue(
+            results.topicsData().contains(
+                new TopicData<>(
+                    tp2.topicId(),
+                    List.of(PartitionFactory.newPartitionErrorData(tp2.partition(), Errors.UNKNOWN_TOPIC_OR_PARTITION.code(), "unknown tp"))
+                )
+            )
+        );
+    }
+
+    @Test
+    public void testInitializeStateResponseToResultFailedFuture() {
+        Map<Uuid, Map<Integer, CompletableFuture<InitializeShareGroupStateResponse>>> futureMap = new HashMap<>();
+        TopicIdPartition tp1 = new TopicIdPartition(Uuid.randomUuid(), 1, null);
+        TopicIdPartition tp2 = new TopicIdPartition(Uuid.randomUuid(), 1, null);
+
+        // one entry has valid results
+        futureMap.computeIfAbsent(tp1.topicId(), k -> new HashMap<>()).put(tp1.partition(), CompletableFuture.completedFuture(
+            new InitializeShareGroupStateResponse(
+                InitializeShareGroupStateResponse.toResponseData(
+                    tp1.topicId(),
+                    tp1.partition()
+                ))
+        ));
+
+        // one entry has failed future
+        futureMap.computeIfAbsent(tp2.topicId(), k -> new HashMap<>())
+            .put(tp2.partition(), CompletableFuture.failedFuture(new Exception("scary stuff")));
+
+        PersisterStateManager psm = mock(PersisterStateManager.class);
+        DefaultStatePersister dsp = new DefaultStatePersister(psm);
+
+        InitializeShareGroupStateResult results = dsp.initializeResponsesToResult(futureMap);
+
+        // results should contain partial results
+        assertEquals(2, results.topicsData().size());
+        assertTrue(
+            results.topicsData().contains(
+                new TopicData<>(
+                    tp1.topicId(),
+                    List.of(PartitionFactory.newPartitionErrorData(tp1.partition(), Errors.NONE.code(), null))
+                )
+            )
+        );
+        assertTrue(
+            results.topicsData().contains(
+                new TopicData<>(
+                    tp2.topicId(),
+                    List.of(PartitionFactory.newPartitionErrorData(tp2.partition(), Errors.UNKNOWN_SERVER_ERROR.code(), "Error initializing state in share coordinator: java.lang.Exception: scary stuff"))
                 )
             )
         );
