@@ -36,7 +36,7 @@ import org.mockito.ArgumentMatchers;
 import java.io.IOException;
 import java.util.ArrayDeque;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Queue;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
@@ -87,7 +87,7 @@ public class InterBrokerSendThreadTest {
 
         @Override
         public Collection<RequestAndCompletionHandler> generateRequests() {
-            return queue.isEmpty() ? Collections.emptyList() : Collections.singletonList(queue.poll());
+            return queue.isEmpty() ? List.of() : List.of(queue.poll());
         }
 
         @Override
@@ -147,7 +147,7 @@ public class InterBrokerSendThreadTest {
         final InterBrokerSendThread sendThread = new TestInterBrokerSendThread();
 
         // poll is always called but there should be no further invocations on NetworkClient
-        when(networkClient.poll(anyLong(), anyLong())).thenReturn(Collections.emptyList());
+        when(networkClient.poll(anyLong(), anyLong())).thenReturn(List.of());
 
         sendThread.doWork();
 
@@ -166,20 +166,20 @@ public class InterBrokerSendThreadTest {
         final TestInterBrokerSendThread sendThread = new TestInterBrokerSendThread();
 
         final ClientRequest clientRequest =
-            new ClientRequest("dest", request, 0, "1", 0, true, requestTimeoutMs, handler.handler());
+            new ClientRequest("dest", request, 0, "1", 0, true, requestTimeoutMs, handler.handler);
 
         when(networkClient.newClientRequest(
             ArgumentMatchers.eq("1"),
-            same(handler.request()),
+            same(handler.request),
             anyLong(),
             ArgumentMatchers.eq(true),
             ArgumentMatchers.eq(requestTimeoutMs),
-            same(handler.handler())
+            same(handler.handler)
         )).thenReturn(clientRequest);
 
         when(networkClient.ready(node, time.milliseconds())).thenReturn(true);
 
-        when(networkClient.poll(anyLong(), anyLong())).thenReturn(Collections.emptyList());
+        when(networkClient.poll(anyLong(), anyLong())).thenReturn(List.of());
 
         sendThread.enqueue(handler);
         sendThread.doWork();
@@ -187,11 +187,11 @@ public class InterBrokerSendThreadTest {
         verify(networkClient)
             .newClientRequest(
                 ArgumentMatchers.eq("1"),
-                same(handler.request()),
+                same(handler.request),
                 anyLong(),
                 ArgumentMatchers.eq(true),
                 ArgumentMatchers.eq(requestTimeoutMs),
-                same(handler.handler()));
+                same(handler.handler));
         verify(networkClient).ready(any(), anyLong());
         verify(networkClient).send(same(clientRequest), anyLong());
         verify(networkClient).poll(anyLong(), anyLong());
@@ -209,22 +209,22 @@ public class InterBrokerSendThreadTest {
         final TestInterBrokerSendThread sendThread = new TestInterBrokerSendThread();
 
         final ClientRequest clientRequest =
-            new ClientRequest("dest", request, 0, "1", 0, true, requestTimeoutMs, handler.handler());
+            new ClientRequest("dest", request, 0, "1", 0, true, requestTimeoutMs, handler.handler);
 
         when(networkClient.newClientRequest(
             ArgumentMatchers.eq("1"),
-            same(handler.request()),
+            same(handler.request),
             anyLong(),
             ArgumentMatchers.eq(true),
             ArgumentMatchers.eq(requestTimeoutMs),
-            same(handler.handler())
+            same(handler.handler)
         )).thenReturn(clientRequest);
 
         when(networkClient.ready(node, time.milliseconds())).thenReturn(false);
 
         when(networkClient.connectionDelay(any(), anyLong())).thenReturn(0L);
 
-        when(networkClient.poll(anyLong(), anyLong())).thenReturn(Collections.emptyList());
+        when(networkClient.poll(anyLong(), anyLong())).thenReturn(List.of());
 
         when(networkClient.connectionFailed(node)).thenReturn(true);
 
@@ -236,11 +236,11 @@ public class InterBrokerSendThreadTest {
         verify(networkClient)
             .newClientRequest(
                 ArgumentMatchers.eq("1"),
-                same(handler.request()),
+                same(handler.request),
                 anyLong(),
                 ArgumentMatchers.eq(true),
                 ArgumentMatchers.eq(requestTimeoutMs),
-                same(handler.handler()));
+                same(handler.handler));
         verify(networkClient).ready(any(), anyLong());
         verify(networkClient).connectionDelay(any(), anyLong());
         verify(networkClient).poll(anyLong(), anyLong());
@@ -261,16 +261,16 @@ public class InterBrokerSendThreadTest {
 
         final ClientRequest clientRequest =
             new ClientRequest(
-                "dest", request, 0, "1", time.milliseconds(), true, requestTimeoutMs, handler.handler());
+                "dest", request, 0, "1", time.milliseconds(), true, requestTimeoutMs, handler.handler);
         time.sleep(1500L);
 
         when(networkClient.newClientRequest(
             ArgumentMatchers.eq("1"),
-            same(handler.request()),
-            ArgumentMatchers.eq(handler.creationTimeMs()),
+            same(handler.request),
+            ArgumentMatchers.eq(handler.creationTimeMs),
             ArgumentMatchers.eq(true),
             ArgumentMatchers.eq(requestTimeoutMs),
-            same(handler.handler())
+            same(handler.handler)
         )).thenReturn(clientRequest);
 
         // make the node unready so the request is not cleared
@@ -278,7 +278,7 @@ public class InterBrokerSendThreadTest {
 
         when(networkClient.connectionDelay(any(), anyLong())).thenReturn(0L);
 
-        when(networkClient.poll(anyLong(), anyLong())).thenReturn(Collections.emptyList());
+        when(networkClient.poll(anyLong(), anyLong())).thenReturn(List.of());
 
         // rule out disconnects so the request stays for the expiry check
         when(networkClient.connectionFailed(node)).thenReturn(false);
@@ -289,11 +289,11 @@ public class InterBrokerSendThreadTest {
         verify(networkClient)
             .newClientRequest(
                 ArgumentMatchers.eq("1"),
-                same(handler.request()),
-                ArgumentMatchers.eq(handler.creationTimeMs()),
+                same(handler.request),
+                ArgumentMatchers.eq(handler.creationTimeMs),
                 ArgumentMatchers.eq(true),
                 ArgumentMatchers.eq(requestTimeoutMs),
-                same(handler.handler()));
+                same(handler.handler));
         verify(networkClient).ready(any(), anyLong());
         verify(networkClient).connectionDelay(any(), anyLong());
         verify(networkClient).poll(anyLong(), anyLong());
